--- a/src/main/webapp/elvish-composition-archive/index.html
+++ b/src/main/webapp/elvish-composition-archive/index.html
@@ -8,7 +8,7 @@
 
 <h1>Elvish Composition Archive</h1>
 
-<p>Version 0.1.4 - June 25, 2023 [Eldamo Mirror]</p>
+<p>Version 0.1.5 - July 19, 2023</p>
 
 <p>This web page and its content are a mirror of the <i>Elvish Composition Archive</i>: a collection of works in Tolkien’s Elvish languages, Quenya and Sindarin. Content is organized alphabetically by <a href="#authors">author</a>. If you want to get (or even host) your own copy of the archive, see the section on <a href="#licensing">mirrors, downloads and licensing</a>. If you want to contribute to the archive, see the section on <a href="#submissions">submissions</a>.</p>
 
@@ -17,12 +17,19 @@
 <p>Each author’s compositions are organized in chronological order of composition, with an indication of which Elvish language(s) they use. Note that the date of composition may not reflect when the composition was added to the archive. Because the works here are the writings of multiple authors, they do not necessarily represent a common vision of the Elvish languages, or the vision of Tolkien himself.</p>
 
 <ul>
+<li><a href="#chaered">Chaered</a></li>
 <li><a href="#ellanto">Ellanto</a></li>
 <li><a href="#luinyelle">Luinyelle</a></li>
 <li><a href="#vyacheslav-stepanov">Vyacheslav Stepanov</a></li>
 </ul>
 
-<h3><a id="#ellanto"></a>Ellanto</h3>
+<h3><a id="chaered"></a>Chaered</h3>
+
+<ul>
+<li><a href="chaered/tengwa-abc.html">Tengwar ABC</a> (Quenya, 2023)</li>
+</ul>
+
+<h3><a id="ellanto"></a>Ellanto</h3>
 
 <ul>
 <li><a href="ellanto/ceraib-serthir.html">Ceraib Serthir</a> (Sindarin, 2023)</li>
@@ -65,6 +72,7 @@
 <li>As of this version, known mirrors of the archive include:
 <ul>
 <li><a href="https://eldamo.org/elvish-composition-archive/">eldamo.org mirror</a></li>
+<li><a href="https://quettali.org/elca/">quettali.org mirror</a></li>
 </ul>
 </li>
 </ul>
