--- a/src/main/webapp/general/terminology-and-notations.html
+++ b/src/main/webapp/general/terminology-and-notations.html
@@ -67,10 +67,9 @@
 </ul>
 <p>Glosses may also have reliability markers.</p>
 <ul>
-<li>* marks “reconstructed” glosses, usually deduced from context or cognates from other language, or English synonyms
+<li>* marks “reconstructed” or fan-invented glosses, usually deduced from context or cognates from other language, or English synonyms
 that better illustrate the particular connotations of a word</li>
 <li>? marks more speculative reconstructed glosses</li>
-<li>! marks unsupported extensions of the Tolkien’s glosses by other authors</li>
 <li>⚠️ marks glosses that are not recommended (by this lexicon) for Neo-Quenya or Neo-Sindarin writing️</li>
 </ul>
 <p><b>Additions and Deletions</b></p>
