--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,10 +10,14 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.7</p>
+<p>v0.8.8</p>
 <ul>
-<li>Dictionary entries for semantic category 6 = Clothing and Adornment.</li>
-<li>More entries from PE17/139-142 with the help of Gilruin.</li>
+<li>Dictionary entries for semantic category 8 = Agriculture and Vegetation.</li>
+<li>Rewrote the “Getting Started With Elvish” document to reflect the current state of the lexicon.</li>
+</ul>
+<p>v0.8.7 (June 30, 2023)</p>
+<ul>
+<li>Dictionary entries for semantic category 7 = Dwelling and Furniture.</li>
 </ul>
 <p>v0.8.6 (May 26, 2023)</p>
 <ul>
