--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
@@ -184,7 +184,7 @@
 </ul>
 
 <ul>
-<li>Note ¹: A <i>c</i> in Quenya is always pronounced like a “hard c” in English, so <i>cir-</i> is pronounced “kir-” not “sir-”. Thus <i>cir-</i> “to cut” is <u>not</u> pronounced like English “circus”, and if <i>circus</i> was a Quenya word it would be pronounced “kirkus” (or more exactly “keerkoos”, see the next note). This is such a common mispronunciation that some writers of Quenya use <i>k</i> instead of <i>c</i> (as Tolkien himself did sometimes), but this course uses <i>c</i> because that’s what Tolkien did in <i>The Lord of the Rings</i>.</li>
+<li>Note ¹: A <i>c</i> in Quenya is always pronounced like a “hard c” in English, so <i>cir-</i> is pronounced “kir-” not “sir-”. Thus <i>cir-</i> “to cut” is <u>not</u> pronounced like English “circus”, and if <i>circus</i> was a Quenya word it would be pronounced “kirkus” (or more exactly “keerkoos”, see the next note). This is such a common mispronunciation that some writers of Quenya use <i>k</i> instead of <i>c</i> (as Tolkien himself did sometimes), but this course uses <i>c</i> because that’s what Tolkien wrote in <i>The Lord of the Rings</i>.</li>
 <li>Note ²: Vowels in Quenya are pronounced more or less like vowels in Italian: <i>i</i> = “ee”, <i>e</i> = “eh”, <i>a</i> = “ah”, <i>o</i> = “oh”, <i>u</i> = “oo”. Thus the verbs <i>cir-</i>, <i>men-</i>, <i>mat-</i>, <i>lor-</i>, <i>tuv-</i> are pronounced “k(ee)r-”, “m(eh)n-”, “m(ah)t-”, “l(oh)r-”, “t(oo)v-”. More information on pronunciation appears in <a href="eldamo-intro-quenya-02.html#c2-1">Chapter 2, Section §2.1</a>.</li>
 </ul>
 
@@ -199,7 +199,7 @@
 <li><i>orco matë aiwi</i> “an orc eats birds”, where <i>aiw[ë]-i</i> = “bird-(pl.)”</li>
 </ul>
 
-<p>Remember: the English word “a, an” is not reflected in the Quenya sentences above, because a word without <i>i</i> “the” is already indefinite in Quenya.</p>
+<p>Remember: the English indefinite article “a, an” is not reflected in the Quenya sentences above, because a word without <i>i</i> “the” is already indefinite in Quenya.</p>
 
 <p><a id="c1-2-2-2"></a><b><u>1.2.2.2 Verb Suffixes:</u></b> Two common verb suffixes are <i>-n</i> for “I” and <i>-r</i> for plural verbs. The suffix <i>-n</i> is added to the verb when the subject of a sentence is “I”, and <i>-r</i> is added to the verb when the subject of the sentence is a plural noun. The aorist tense is a bit special, because the tense suffix becomes <i>-i</i> instead of <i>-ë</i> if further suffixes are added:</p>
 
@@ -320,7 +320,7 @@
 <li><i>tuvi-ssë cöa-nya</i> “finds-he house-my”</li>
 </ul>
 
-<p><a id="c1-2-3-1"></a><b><u>1.2.3.1 Object Pronouns:</u></b> Quenya object pronouns are independent pronouns. Quenya doesn’t have distinct words for “him, her”, and uses one word for both. The independent form of pronouns is also used with preposition and noun cases (more on these later). Common independent pronouns are:</p>
+<p><a id="c1-2-3-1"></a><b><u>1.2.3.1 Object Pronouns:</u></b> Quenya object pronouns are independent pronouns. Quenya doesn’t have distinct words for “him, her”, and uses one word for both. The independent form of pronouns is also used with prepositions and noun cases (more on these later). Common independent pronouns are:</p>
 
 <ul class="vocab-list">
 <li><b>ni</b> <i>pron.</i> “me”</li>
@@ -457,7 +457,7 @@
 <li><b><a href="#c1-2-4-4">1.2.4.4 Section Summary</a></b></li>
 </ul>
 
-<p>Adjectives are words that describe other things, generally nouns. Adverbs describe or modify the action of the entire sentence, and can be viewed as modifying the verb. Here is a sample of Quenya adjective and adverbs with their meanings:</p>
+<p>Adjectives are words that describe other things, generally nouns. Adverbs describe or modify the action of the entire sentence, and can be viewed as modifying the verb. Here is a  sample of Quenya adjectives and adverbs with their meanings:</p>
 
 <ul class="vocab-list">
 <li><b>alcarin</b> <i>adj.</i> “glorious”</li>
@@ -484,7 +484,7 @@
 <li><i>melda macil</i> “a beloved sword”</li>
 <li><i>norin palan</i> “I run far” (<i>nori-n</i> = “run-I”)</li>
 <li><i>i hesto lóra mai</i> “the captain is sleeping well”</li>
-<li><i>tiris oialë</i> “He/she watches forever” (<i>tiri-s</i> = “watches-he/she”)</li>
+<li><i>tiris oialë</i> “he/she watches forever” (<i>tiri-s</i> = “watches-he/she”)</li>
 </ul>
 
 <p><a id="c1-2-4-1"></a><b><u>1.2.4.1 Plural Adjectives:</u></b> Like verbs, adjectives must be plural if their associated noun is plural. Like nouns, plural adjectives add <i>-i</i> if they end in a consonant or the vowel <i>-ë</i> (which replaces the final <i>ë</i> as with nouns). Unlike nouns, adjectives ending in <i>-a</i> form their plural by changing that <i>a</i> to an <i>ë</i> rather than adding an <i>-r</i>: <i>i turca elda</i> “the strong elf” → <i>i turcë eldar</i> “the strong elves”. More examples:</p>
@@ -830,7 +830,7 @@
 <li><i>tíranye i orcor <u>illon</u> i atan norë</i> “I am watching the orcs <u>from whom (pl.)</u> the man runs”.</li>
 </ul>
 
-<p>Here the original nouns are plural: <i>taure-sse-n</i> “forest-in-(pl.)” and <i>orco-r</i> “orc-(pl.)”. Thus the declined relative pronouns must also use plural noun cases: <i>ya-nna-r</i> “which-to-(pl.)” and <i>i-llo-n</i> “(who pl.)-from-(pl.)”. This seems to contradict the notion from the previous section that <i>i</i> “who, which, that” is indeclinable, but strictly speaking, <i>i-</i> in <i>illon</i> is <u>not</u> the indeclinable relative pronoun, but rather is the plural form of declinable <i>ye</i> “who”. Yes, this can be confusing, but we will discuss it again in more detail in <a href="eldamo-intro-quenya-10.html#c10-1">Chapter 10, Section §10.1</a>.</p>
+<p>Here the original nouns are plural: <i>taure-sse-n</i> “forest-in-(pl.)” and <i>orco-r</i> “orc-(pl.)”. Thus the declined relative pronouns must also use plural noun cases: <i>ya-nna-r</i> “which-to-(pl.)” and <i>i-llo-n</i> “(who pl.)-from-(pl.)”. This seems to contradict the notion from the previous section that <i>i</i> “who, which, that” is indeclinable, but strictly speaking, <i>i-</i> in <i>illon</i> is <u>not</u> the indeclinable relative pronoun, but rather is the plural form of declinable <i>ye</i> “who”. This can be confusing, but we will discuss it again in more detail in <a href="eldamo-intro-quenya-10.html#c10-1">Chapter 10, Section §10.1</a>.</p>
 
 <p><a id="c1-2-6-4"></a><b><u>1.2.6.4 Distribution of Meaning Among Words:</u></b> The examples in this section illustrate an important fact about Quenya: the distribution of meaning among words in Quenya are not necessarily the same as in English. You cannot assume that a given Quenya word can be used in all the same ways as its English translation. For example, English has two relative pronouns which can be used for persons: “who” and “that”. Quenya likewise has indeclinable <i>i</i> and declinable <i>ye</i>, but used in different circumstances.</p>
 
@@ -934,7 +934,7 @@
 <li><i>Helge Fauskanger’s Quenya Course</i>; Helge Fauskanger; 2003; <a href="https://folk.uib.no/hnohf/qcourse.htm">https://folk.uib.no/hnohf/qcourse.htm</a>.</li>
 <li><i>Quetin i Lambë Eldaiva</i>; Thorsten Renk; 2008; <a href="http://www.science-and-fiction.org/bookstore.html#lambe_eldaiva">http://www.science-and-fiction.org/bookstore.html#lambe_eldaiva</a>.</li>
 <li><i>Atanquesta: a NeoQuenya Primer</i>; Tamas Ferencz; 2018; <a href="https://docs.google.com/document/d/1gafhQ7YWI0xKXDBnkkOnMwJU63cvuygzbFFW6IurYkU/mobilebasic">https://middangeard.org.uk/atanquesta/</a>.</li>
-<li><i>Amanye Tenceli</i>; Måns Björkman; 1999-present; <a href="http://at.mansbjorkman.net">http://at.mansbjorkman.net</a>. This is not a Quenya course per se, but is the best discussion of Tengwar on the internet, and the main inspiration for the tengwar information in this course.</li>
+<li><i>Amanye Tenceli</i>; Måns Björkman; 1999-present; <a href="http://at.boktypografen.se">http://at.boktypografen.se</a>. This is not a Quenya course per se, but is the best discussion of Tengwar on the internet, and the main inspiration for the tengwar information in this course.</li>
 <li>Although incomplete, another major resource was Raccoon’s Tenguesta Goldorinwa: <a href="https://feophan.github.io/tenguesta_ngoldorinwa/">https://feophan.github.io/tenguesta_ngoldorinwa/</a>.</li>
 </ul>
 
