--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
@@ -866,7 +866,7 @@
 <p><a id="c2-3-1-4"></a><b>2.3.1.4 <i>ná-</i> Plurality Agreement:</b> When a “to be” statement compares a noun and an adjective, then the adjective must be in the plural to match a plural noun. Likewise, if a past or future form of <i>ná</i> appears and the subject noun is plural, then the inflected verb form needs the usual plural verb suffix <i>-r</i>:</p>
 
 <ul>
-<li><i>i eldar hallë</i> “the elves are tall (<i>halla</i> + plural <i>ë</i>)”</li>
+<li><i>i eldar hallë</i> “the elves [are] tall (<i>halla</i> + plural <i>ë</i>)”</li>
 <li><i>i naucor <u>náner</u> hestor</i> “the dwarves were captains”.</li>
 </ul>
 
@@ -930,7 +930,7 @@
 <p>Note that in some of Tolkien’s earlier writings, he used <i>ëa</i> instead of <i>ná</i> as the basic “to be” verb, most notably in the <i>Quenya Verbal System</i> (QVS) written in 1948 (PE22/122-124). Some of the ideas presented in this 1948 document remain applicable to Quenya, but with <i>ëa</i> updated to <i>ná</i>. In particular, there is an interesting discussion on how Quenya handles locational expressions that still remains relevant (PE22/125-126). It is summarized in the following section but (a) with <i>ëa</i> revised to <i>ná</i> and (b) some of the locational verbs updated to later forms, as discussed in the section section <a href="#c2-2-5-2">2.2.5.2 Verbs of Location</a>.</p>
 </div>
 
-<p><a id="c2-3-2-4"></a><b>2.3.2.4 Locational Expressions:</b> English frequently uses “be” in expressions of location, but it seems Quenya rarely does so. The verb <i>ná</i> is generally omitted as is often the case, with the usual exceptions for inflected forms, such as <i>tanomë i osto</i> “there is the city” (PE22/124) versus <i>tanomë nauvan</i> “I will be there” (VT49/19). Omitting <i>ná</i> may also be possible with prepositional expressions or a directional noun cases (<i>-nna, -llo, -ssë</i>):</p>
+<p><a id="c2-3-2-4"></a><b>2.3.2.4 Locational Expressions:</b> English frequently uses “be” in expressions of location, but it seems Quenya rarely does so. The verb <i>ná</i> is generally omitted as is often the case, with the usual exceptions for inflected forms, such as <i>tanomë i osto</i> “there [is] the city” (PE22/124) versus <i>tanomë nauvan</i> “I will be there” (VT49/19). Omitting <i>ná</i> may also be possible with prepositional expressions or a directional noun cases (<i>-nna, -llo, -ssë</i>):</p>
 
 <ul>
 <li><i>Elerondo Endoressë</i> “Elrond [is] in Middle-earth”.</li>
@@ -1229,7 +1229,7 @@
 <li><b><a href="#c2-4-2-2">2.4.2.2 Verb Stems</a></b></li>
 </ul>
 
-<p>It is fairly common for Quenya words to use different base forms with and without inflections. Vocabulary entries have the uninflected form (also known as the simplex), followed by an optional stem form in parentheses if it is different from the uninflected form, for example: <i>perian</i> (<i>periand-</i>) “halfling”.</p>
+<p>It is fairly common for Quenya words to use different base forms with and without inflections. Vocabulary entries have the uninflected form, also known as the simplex, followed by an optional stem form in parentheses if it is different from the uninflected form, for example: <i>perian</i> (<i>periand-</i>) “halfling”.</p>
 
 <p><a id="c2-4-2-1"></a><b>2.4.2.1 Noun Stems:</b> One common reason for nouns to have different stem forms is for there to have been sound losses, usually consonant reductions, that occurred in the simplex but not in inflected forms. An example of this is <i>perian</i> (<i>periand-</i>) “halfling”, where the final <i>nd</i> reduced to <i>n</i> in the simplex (<i>perian</i>) but was retained in inflected forms like plural <i>periandi</i> “halflings”. In such cases, the stem is longer than the simplex.</p>
 
@@ -1379,7 +1379,7 @@
 
 <p>It is not clear how much of this idealized view of marriage was reflected in the actual lives of Elves. In times of strife, marriage could be delayed, as well as childrearing after marriage. It was the act of child bearing itself that taxed their spirits, so that Elves who refrained from having children remained fertile long into their lives, though those who lived millenia without childbearing would eventually lose that capacity. It was also possible that some Elves would never find a suitable mate, either because one could not be found, or because the one they loved did not share their feelings.</p>
 
-<p>It was also possible for Elves to have unhealthy marriages, though they still remained permanent. The best known example is the union of Eöl and Aredhel, where Eöl trapped Aredhel into marriage. But even there Tolkien said “It is not said that Aredhel was wholly unwilling, nor that her life in Nan Elmoth was hateful to her for many years” (S/133). Tolkien also said that “Even when in after days, as the histories reveal, many of the Eldar in Middle-earth became corrupted, and their hearts darkened by the shadow that lies upon Arda, seldom is any tale told of deeds of lust among them” (MR/210). Even among corrupted Elves, while unrequited love could turn to darker emotions, the idea of <u>forced</u> sex was nearly unthinkable.</p>
+<p>It was also possible for Elves to have unhealthy marriages, though they still remained permanent. The best known example is the union of Eöl and Aredhel, where Eöl trapped Aredhel into marriage. But even there Tolkien said “It is not said that Aredhel was wholly unwilling, nor that her life in Nan Elmoth was hateful to her for many years” (S/133). Tolkien also said that “Even when in after days, as the histories reveal, many of the Eldar in Middle-earth became corrupted, and their hearts darkened by the shadow that lies upon Arda, seldom is any tale told of deeds of lust among them” (MR/210).</p>
 
 <div class="advanced-topic">
 <p>Most of the above material draws from the essay <i>Laws and Customs Among the Eldar</i> published in the book <i>Morgoth’s Ring</i> (MR/207-227), along with some linguistic notes from essays on Time and Aging published in <i>The Nature of Middle-earth</i> (footnotes on NM/16, 20). By 21st century standards, it may seem that Tolkien’s vision of Elvish marriage was overly idealized or even prudish, but do bear in mind that Tolkien was a devout Catholic born at the end of the 19th century, so modern sensibilities don’t necessarily apply.</p>
@@ -1552,7 +1552,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <p>There was no unified Quenya grammar in this period, but Tolkien wrote several more specialized documents on Quenya nouns, verbs and the language’s phonological character. In this period Tolkien also revealed the existence of his tales to the rest of the world with the publication of <i>The Hobbit</i> in 1937. Shortly after, Tolkien started working on his most famous work, <i>The Lord of the Rings</i>, which he wrote between 1937 and 1949. His private work on <i>The Silmarillion</i> also advanced considerably in this period.</p>
 
-<p>In the 1930s and 40s, the Elvish languages became increasingly tied to Tolkien’s Legendarium. The “real world” elements of the languages mostly vanished (through Tolkien did later translate a few Catholic prayers into Elvish in the 1950s). Some of the more obvious resemblances between Primitive Elvish and Proto-Indo-European were removed. Carl Hostetter made a persuasive argument that <i>The Etymologies</i> itself may have been created primarily as a way of explaining names in <i>The Silmarillion</i> (and to a lesser extent <i>The Lord of the Rings</i>), rather than being a general-purpose linguistic work like the <i>Qenya Lexicon</i>.</p>
+<p>In the 1930s and 40s, the Elvish languages became increasingly tied to Tolkien’s Legendarium. The “real world” elements of the languages mostly vanished (through Tolkien did later translate a few Catholic prayers into Elvish in the 1950s). Some of the more obvious resemblances between Primitive Elvish and Proto-Indo-European were removed. Carl Hostetter made a persuasive argument (at Omentielva Otsea in 2017) that <i>The Etymologies</i> itself may have been created primarily as a way of explaining names in <i>The Silmarillion</i> (and to a lesser extent <i>The Lord of the Rings</i>), rather than being a general-purpose linguistic work like the <i>Qenya Lexicon</i>.</p>
 
 <p><a id="c2-7-3"></a><b>2.7.3 Late Quenya (1950s-1970s):</b> <i>The Lord of the Rings</i> was published as three separate books in 1954-5, at which point the world at large finally learned of Tolkien’s Elvish languages. This was followed by a second edition in 1965. In the 1950s and 60s Tolkien also went through a major rewrite of <i>The Silmarillion</i> in the hopes of publishing it after <i>The Lord of the Rings</i>, work that Tolkien himself was sadly unable to complete. <i>The Silmarillion</i> was edited and published in 1977 by his son Christopher Tolkien instead, four years after J.R.R. Tolkien’s death in 1973. The publication of <i>The Lord of the Rings</i> did not stop Tolkien’s work on the Elvish languages, and he continued to modify them throughout the 1950s, 60s, and 70s up until his death.</p>
 
@@ -1564,7 +1564,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <p><a id="c2-7-4"></a><b>2.7.4 Neo-Quenya (post-Tolkien):</b> Very little was known about Tolkien’s Elvish languages at the time of his death. It was not until <i>The History of Middle-earth</i> series was published in the 1980s, followed by the linguistic articles in the academic journals <i>Parma Eldalamberon</i> and <i>Vinyar Tengwar</i> beginning in the late 90s, that the rest of the world got an inkling of the depth and complexity of his languages. Both the book series and the academic journals began publishing the earliest material first, putting students of Elvish in the peculiar position of knowing more about the Elvish languages as Tolkien imagined them in his youth than they did about his later writings.</p>
 
-<p>With the publication of <i>The Etymologies</i> in 1987, and <i>Words, Phrases and Passages</i> twenty years later in 2007, students of Elvish were finally able to build a picture of how Tolkien imagined Elvish in the period before and after the publication of <i>The Lord of the Rings</i>. As more information became available, however, the fundamentally incomplete nature of the Elvish languages became clear. While some of his ideas about the Elvish languages were quite stable, there were other areas where Tolkien kept changing his mind. Figuring out which of his ideas were compatible with others can be very challenging, and almost always involves some degree of guesswork. This isn’t necessarily a problem for those involved in the pure academic study of Tolkien’s languages, but for those who actually want to <u>use</u> Quenya to craft compositions of their own, it can be a big problem.</p>
+<p>With the publication of <i>The Etymologies</i> in 1987, and <i>Words, Phrases and Passages</i> twenty years later in 2007, students of Elvish were finally able to build a picture of how Tolkien imagined Elvish in the period before and after the publication of <i>The Lord of the Rings</i>. As more information became available, however, the fundamentally incomplete nature of the Elvish languages became clear. While some of his ideas about the Elvish languages were quite stable, there were other areas where Tolkien kept changing his mind. Figuring out which of his ideas were compatible with others can be very challenging, and almost always involves some degree of guesswork. This isn’t necessarily a problem for those involved in the pure academic study of Tolkien’s languages, but for those who actually want to <u>use</u> Quenya to craft compositions of their own, it can be a significant challenge.</p>
 
 <p>That is especially the case when presenting Quenya to relative beginners, as this course aims to do. To avoid this issue, most Quenya courses (including this one) present a simplified version of the Elvish languages to make it easier for students to grasp. Such “post-Tolkien” renditions of Elvish are usually referred to as Neo-Quenya, and they gloss over the messier details and contradictions of the source material. You can’t reasonably expect the student to grasp the complexity of sixty years of worth of evolution for Tolkien’s languages when they are still wrestling with basic grammar.</p>
 
@@ -1982,7 +1982,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <ol class="exercise-list" start="11">
 <li><i>I atan mennë i ostonna.</i></li>
-<li><i>Autëas i taurëllo.</i></li>
+<li><i>Autëas i taurello.</i></li>
 <li><i>I orcor marir nu i oron.</i></li>
 <li><i>I hesto tultanë elda.</i></li>
 <li><i>I sírë latë ara nórelya.</i></li>
@@ -2001,7 +2001,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <ol class="exercise-list tengwar-block" start="11">
 <li><span class="transcribe" data-lang="q" data-value="I atan mennë i ostonna">I atan mennë i ostonna</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Autëas i taurëllo">Autëas i taurëllo</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Autëas i taurello">Autëas i taurello</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I orcor marir nu i oron">I orcor marir nu i oron</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I hesto tultanë elda">I hesto tultanë elda</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I sírë latë ara nórelya">I sírë latë ara nórelya</span></li>
@@ -2075,7 +2075,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <ol class="exercise-list">
 <li>The ship sailed out of the sea and in to the harbour.</li>
-<li>The man [male] that is sitting on the beach is a sailor.</li>
+<li>The man [male] that is sitting on the shore is a sailor.</li>
 <li>The mast is standing tall on the boat.</li>
 <li>Ships sail on [the] sea but birds fly in [the] sky.</li>
 <li>The moon shone on the hill.</li>
@@ -2085,7 +2085,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <ol class="exercise-list" start="7">
 <li><i>Anar cála ar i aiwi vílar vilyassë.</i></li>
 <li><i>Lumbor lutir fanyaressë.</i></li>
-<li><i>Falma ailinessë nitya ná mal falma ëaressë höa ná.</i></li>
+<li><i>Falma i ailinessë nitya ná mal falma i ëaressë höa ná.</i></li>
 <li><i>I súrë turwa sí.</i></li>
 <li><i>Atan hya nauco tirë cemen mal elda tirë menel.</i></li>
 <li><i>I nissi túler i tollenna yassë i eldar marir.</i></li>
@@ -2096,7 +2096,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <ol class="exercise-list tengwar-block" start="7">
 <li><span class="transcribe" data-lang="q" data-value="Anar cála ar i aiwi vílar vilyassë">Anar cála ar i aiwi vílar vilyassë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Lumbor lutir fanyaressë">Lumbor lutir fanyaressë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Falma ailinessë nitya ná mal falma ëaressë höa ná">Falma ailinessë nitya ná mal falma ëaressë höa ná</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Falma i ailinessë nitya ná mal falma i ëaressë höa ná">Falma i ailinessë nitya ná mal falma i ëaressë höa ná</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I súrë turwa sí">I súrë turwa sí</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Atan hya nauco tirë cemen mal elda tirë menel">Atan hya nauco tirë cemen mal elda tirë menel</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I nissi túler i tollenna yassë i eldar marir">I nissi túler i tollenna yassë i eldar marir</span></li>
