--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -256,13 +256,13 @@
 <li><b>Dative Singular:</b> This case uses the suffix <i>-(e)n</i> in the singular: <i>eldan</i> (<i>elda-n</i>) “to/for an elf”, <i>atanen</i> (<i>atan-en</i>) “to/for a man”. For example:
 <ul>
 <li><i>i elda antanë i macil i atanen</i> “the elf gave the sword to the man”.</li>
-<li><i>i atan nyára i quenta i eldan</i> “the man is telling the story to the elf”.</li>
+<li><i>i atan nyára quenta i eldan</i> “the man is telling a story to the elf”.</li>
 </ul></li>
 <li><b>Dative Plural:</b> The dative plural uses the suffix <i>-in</i>, replacing the final <i>ë</i> of the noun if there is one.
 <ul>
-<li><i>i atan nyára i quenta i eldain</i> “the man is telling the story to the elves”.</li>
+<li><i>i atan nyára quenta i eldain</i> “the man is telling a story to the elves”.</li>
 <li><i>i elda antanë i macili i atanin</i> “the elf gave the swords to the men”.</li>
-<li><i>i eldar tecir tengwar lambin eldaron</i> “the elves write tengwar for the languages of the elves”; <i>lambin</i> = <i>lambë + in</i>.</li>
+<li><i>i eldar tecir tengwar lambin eldaron</i> “the elves write tengwar for [the] languages of the elves”; <i>lambin</i> = <i>lambë + in</i>.</li>
 </ul></li>
 </ul>
 
@@ -429,7 +429,7 @@
 <li><i>i orcor nórar tyello</i> “the orcs are running from you (familiar)”.</li>
 <li><i>i orcor nórar lello</i> “the orcs are running from you (plural)”.</li>
 <li><i>Anar calë sanna</i> “the Sun shines upon it (inanimate)”.</li>
-<li><i>Isil silë tenna</i> “the Moon shines upon them”.</li>
+<li><i>Isil silë tenna</i> “the Moon shines [white] upon them”.</li>
 </ul>
 
 <p>The independent pronoun form is also used when the pronoun is the direct object of the verb: <i>i nissi tírar ve</i> “the women are watching us (including you)”.</p>
@@ -483,7 +483,7 @@
 
 <p><a id="c3-2-3-1"></a><b>3.2.3.1 Possessive Suffixes and Noun Cases:</b> When a possessed noun is put into a noun case, the possessive suffix is always added first, followed by any case suffix. For example <i>atarinyallo</i> “from my father” = <i>atar-inya-llo</i> (ablative), <i>yondolmo</i> “of our son” = <i>yondo-lma+o</i> (genitive); remember that the genitive suffix <i>-o</i> replaces any final <i>a</i> as mentioned in Chapter 1, Section <a href="eldamo-intro-quenya-01.html#c1-2-5-2">1.2.5.2 Genitive</a>. The plurality of the case suffix depends on the plurality of the noun, not the plurality of the possessor. So it is <i>cöantanna</i> “to their house” (<i>cöa-nta-nna</i>) with singular <i>-nna</i> (allative) because there is only one house, but it is <i>tecilelvainen</i> “with our pens” (<i>tecil-elva-inen</i>) with plural <i>-inen</i> (instrumental) because there are multiple pens.</p>
 
-<p><a id="c3-2-3-2"></a><b>3.2.3.2 Independent Possessives:</b> There are a few examples of independent possessive pronouns in Tolkien’s writing: <i>ninya</i> “my” (LR/72), <i>menya</i> “our” (VT43/11). Where they appeared, they were used as adjectives: <i>ninya atar</i> “my father”, <i>menyë rohtar</i> “our sins”; the second example indicates they were made plural to agree with plural nouns like other adjectives. Assuming these examples are representative, the pattern is clear: add <i>-nya</i> to an independent pronoun to get the independent possessive. For example, we would expect *<i>lyenya</i> for “your (polite)”.</p>
+<p><a id="c3-2-3-2"></a><b>3.2.3.2 Independent Possessives:</b> There are a few examples of independent possessive pronouns in Tolkien’s writing: <i>ninya</i> “my” (LR/72), <i>menya</i> “our” (VT43/11). Where they appeared, they were used as adjectives: <i>ninya atar</i> “my father”, <i>menyë rohtar</i> “our sins”, the second example indicating they were made plural to agree with plural nouns like other adjectives. Assuming these examples are representative, the pattern is clear: add <i>-nya</i> to an independent pronoun to get the independent possessive. For example, we would expect *<i>lyenya</i> for “your (polite)”.</p>
 
 <p>These independent possessives are used much less frequently than the possessive suffixes. <span class="advanced-topic">Speculative:</span> For this reason, it has become established practice to use them as possessive pronouns as well, indicating a thing possessed: <i>ta ninya (ná)</i> “that (is) mine”, <i>cauvalme menya</i> “we will receive ours”.</p>
 
@@ -667,7 +667,7 @@
 
 <p>Note ⁶: The word <i>ma</i> is the basic question word in Quenya, and a statement can be turned into a question just by adding <i>ma</i>: <i>nalyë márië</i> “you are well” vs. <i>ma nalyë márië</i> “are you well?”; <i>i nér linta</i> “the man [is] swift” vs. <i>ma i nér linta</i> “is the man swift?”. The basic responses are <i>ná</i> “yes” (it is so) and <i>ui</i> “no” (it is not so). We will have a lot more to say about questions in <a href="eldamo-intro-quenya-08.html#c8-2">Chapter 8, Section §8.1</a>, and will talk about negation (no, not) in <a href="eldamo-intro-quenya-05.html#c5-5">Chapter 5, Section 5.5</a>.</p>
 
-<p>Note ⁷: The word <i>mecin</i> “please” is probably a formulaic verb expression meaning something like “I ask/request/beg” (<i>meci-n</i>), but we don’t actually know what the verb <i>mec-</i> means. It’s probably best to just treat <i>mecin</i> like a fossilized formula, not unlike English “please” which is itself a reduction of “if it pleases you” with the rarely-used verb “to please”. Like English “please”, <i>mecin</i> can probably be used in phrases where the actual verb expression no longer makes sense, such as <i>ma túlalyë mecin</i> “are you coming please?” as a form of oblique request. Quenya does, in fact, have a verb <i>fasta-</i> “to please”, meaning “give pleasure to, make happy”, but it is a separate verb not used in politeness formulas.</p>
+<p>Note ⁷: The word <i>mecin</i> “please” is probably a formulaic verb expression meaning something like “I ask/request/beg” (<i>meci-n</i>), but we don’t actually know what the verb <i>mec-</i> means. It’s probably best to just treat <i>mecin</i> like a fossilized formula, not unlike English “please” which is itself a reduction of “if it pleases you” from the rarely-used verb “to please”. Like English “please”, <i>mecin</i> can probably be used in phrases where the actual verb expression no longer makes sense, such as <i>ma túlalyë mecin</i> “are you coming please?” as a form of oblique request. Quenya does, in fact, have a verb <i>fasta-</i> “to please”, meaning “give pleasure to, make happy”, but it is a separate verb not used in politeness formulas.</p>
 
 <p>Note ⁸: The verb <i>mer-</i> “hope, wish, want” is often followed by another verb for the thing wished for: <i>merin menë i ostonna</i> “I want to go to the city”. This second verb (<i>menë</i> “go”) looks like an uninflected aorist form, but is actually the infinitive form. We will discuss infinitives in <a href="eldamo-intro-quenya-07.html#c7-2-1">Chapter 7, Section §7.1.2</a>.</p>
 
@@ -738,7 +738,7 @@
 
 <p>It is also possible for an imperative statement to be made with just a bare aorist verb: <i>tulë</i> “come”. This is less common in modern Quenya, except with the verb <i>ná</i>: <i>na márië</i> “be well” (PE17/59, 74), <i>na airë esselya</i> “hallowed be thy name, (lit.) be holy name-thy (<i>esse-lya</i>)” (VT43/12). The second of these is an indirect imperative, one where the “commanded” party is not present and is generally in the 3rd person. Such indirect imperatives are possible with the particle <i>á</i> as well: <i>á vala Manwë</i> “may Manwë order it” (WJ/404), except that the subject follows the verb. If there is an object, this in turn follows the subject: <i>á mate i Elda massa</i> “let the Elf eat bread” (I command that the Elf be allowed to eat bread).</p>
 
-<p>Indirect imperatives may include a subject pronoun, which is suffixed to the <i>á</i>: <i>áse tulë</i> “let him come” (note: the suffix is <i>-se</i> rather than the usual <i>-ssë</i> due to stress rules which will be discussed in <a href="eldamo-intro-quenya-06.html#c6-1-2-3">Chapter 6, Section §6.1.2.3</a>). It is possible (though rare) for the 2nd sg. pronoun <i>lye</i> to be used this way: <i>ályë tulë</i> “come (you)”. If the pronoun (or noun) in the indirect command is plural, then the verb is also plural: <i>áldë tulir</i> “come (you all)”, <i>ántë tulir</i> “let them come”, <i>á tulir i atani</i> “let the men come”. Where there is a subject noun for an indirect imperative (<i>i atani</i>), it follows rather than precedes the verb.</p>
+<p><span class="advanced-topic">Speculative:</span> Indirect imperatives may include a subject pronoun, which is suffixed to the <i>á</i>: <i>áse tulë</i> “let him come” (note: the suffix is <i>-se</i> rather than the usual <i>-ssë</i> due to stress rules which will be discussed in <a href="eldamo-intro-quenya-06.html#c6-1-2-3">Chapter 6, Section §6.1.2.3</a>). It is possible (though rare) for the 2nd sg. pronoun <i>lye</i> to be used this way: <i>ályë tulë</i> “come (you)”. If the pronoun (or noun) in the indirect command is plural, then the verb is also plural: <i>áldë tulir</i> “come (you all)”, <i>ántë tulir</i> “let them come”, <i>á tulir i atani</i> “let the men come”. Where there is a subject noun for an indirect imperative (<i>i atani</i>), it follows rather than precedes the verb.</p>
 
 <p>Just because <i>á</i> is used for commands doesn’t mean it is overbearing in tone, any more than it is overbearing to say “help me out” in English. However, various formations can be used to soften the tone of a command, especially the word <i>mecin</i> “please”, just like in English: <i>á tulë, mecin</i> “come, please” (PE22/166). Also like English, a question can be used in place of a command to further soften the request: <i>ma tuluvalyë enar, mecin</i> “will you come tomorrow, please?” (PE22/106).</p>
 
@@ -766,9 +766,9 @@
 <li><i>nai i atani tuluvar</i> “may the men come” (wish).</li>
 </ul>
 
-<p>A similar verb <i>mer-</i> “to hope, want, wish” was introduced in section <a href="#c3-3-4">3.3.4 Vocabulary: Politeness</a>. This verb is used for statements <u>about</u> wishes rather than making the wish itself. Compare: <i>merin i cenil i osto</i> “I want you to see the city, (lit.) I want that you see the city” vs. <i>nai cenil i osto</i> “may [it be that] you see the city”. The first describes a wish (saying what the speaker wants), while the second <u>is</u> a wish (an expression of a hoped-for outcome).</p>
+<p>A similar verb <i>mer-</i> “to hope, want, wish” was introduced in section <a href="#c3-3-4">3.3.4 Vocabulary: Politeness</a>. This verb is used for statements <u>about</u> wishes rather than making the wish itself. Compare: <i>merin i cenil i osto</i> “I want you to see the city, (lit.) I want that you see the city” vs. <i>nai cenuval i osto</i> “may [it be that] you see the city”. The first describes a wish (saying what the speaker wants), while the second <u>is</u> a wish (an expression of a hoped-for outcome).</p>
 
-<p>While <i>nai</i> is typically used with the future, it is occasionally used with the present when wishing for a current state, as in <i>nai Eru mantëa tye</i> “may God bless you, (lit.) may it be that God is blessing you [now]”, with the verb <i>manta-</i> “to bless” (PE17/75). This “present wish” is especially common with “to be” statements, where the verb <i>ná</i> is usually omitted: <i>nai hínalya alassëa</i> “may your child [be] happy” (VT49/41). But <i>nai</i> is not used with past statements, since this veers into the realm of hypotheticals as discussed in <a href="eldamo-intro-quenya-11.html#c11-2">Chapter 11, Section §11.2</a>.</p>
+<p>While <i>nai</i> is typically used with the future, it is occasionally used with the present when wishing for a current state, as in <i>nai Eru mantëa tye</i> “may God bless you, (lit.) may it be that God is blessing you [now]”, with the verb <i>manta-</i> “to bless” (PE17/75). This “present wish” is especially common with “to be” statements, where the verb <i>ná</i> is usually omitted: <i>nai hínalya alassëa</i> “may your child [be] happy” (VT49/41). But <i>nai</i> is not used with past statements, since that veers into the realm of hypotheticals as discussed in <a href="eldamo-intro-quenya-11.html#c11-2">Chapter 11, Section §11.2</a>.</p>
 
 <div class="advanced-topic">
 <p><a id="c3-4-3-1"></a><b>3.4.3.1 How do we know this?</b> As with the discussion on imperatives, the above draws on several sources, but is based largely on an article on “Five Late Quenya Volitive Inscriptions” written by Carl Hostetter in 2007 where the <i>nai</i> construction was described by Hostetter in detail (VT49/38-48). This <i>nai</i> formation is one Tolkien used regularly, since he often included best wishes in Quenya when writing letters to others. Most of the examples above are drawn directly from Tolkien, with some adjustments to fit the vocabulary of this course. One of the examples, “may God bless you”, was originally written <i>nai Eru tye mánata</i> (PE17/75). I’ve rewritten it as <i>nai Eru mantëa tye</i>, because the original uses two constructs we haven’t talked about yet: direct object pronouns (<i>tye</i>) that precede the verb (discussed in <a href="eldamo-intro-quenya-04.html#c4-3-2-1">Chapter 4, §4.3.2.1</a>) and an archaic present tense <i>mánata</i> “is blessing” of talat-stem verbs (discussed in <a href="eldamo-intro-quenya-08.html#c8-1-4">Chapter 8, Section §8.1.4</a>).</p>
@@ -794,7 +794,7 @@
 </ul>
 
 <ul>
-<li>Note ¹: The word <i>aurë</i> is “day” as the word for the daytime, the opposite of night (<i>lómë</i>). The word <i>ré</i> is for “day” as a period of time (24 hours), including both day and night, used in reckoning time: 6 days = <i>rí enquë</i> (the plural of <i>ré</i> is mildly irregular in that the plural has a long <i>í</i>). The Elves felt that the day began at sunset rather than sunrise or midnight, and so measured <i>ré</i> from sunset to sunset (LotR/1107). The Elves were quite comfortable at night time, and didn’t have many of the negative connotations with night that men did.</li>
+<li>Note ¹: The word <i>aurë</i> is “day” as the word for the daytime, the opposite of night (<i>lómë</i>). The word <i>ré</i> is for “day” as a period of time (24 hours), including both day and night, used in reckoning time: 6 days = <i>rí enquë</i> (the plural of <i>ré</i> is mildly irregular in that the plural has a long <i>í</i>). The Elves felt that the day began at sunset rather than sunrise or midnight, and so measured <i>ré</i> from sunset to sunset (LotR/1107). The Elves were quite comfortable at night time, and didn’t have many of the negative connotations with night that Men did.</li>
 </ul>
 
 <p>Here are some vocabulary words mostly having to do with directions:</p>
