--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-04.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-04.html
@@ -262,7 +262,7 @@
 
 <p>All of this indicates the depth at which Tolkien thought about his Elvish languages. Not only did he invent an elaborate script for writing his languages, he also decided how that script evolved over time as the sounds of the languages changed.</p>
 
-<p>For more information on the history of individual tengwar letters, a good resource is the Amanyë Tenceli website: <a href="http://at.mansbjorkman.net/teng_quenya.htm">http://at.mansbjorkman.net/teng_quenya.htm</a>.</p>
+<p>For more information on the history of individual tengwar letters, a good resource is the Amanyë Tenceli website: <a href="http://at.boktypografen.se/teng_quenya.htm">http://at.boktypografen.se/teng_quenya.htm</a>.</p>
 </div>
 
 <h2><a id="c4-1-2"></a>4.1.2 Tengwar Vowel Tehta</h2>
@@ -540,7 +540,7 @@ Red tehta don’t work in safari
 
 <p>Some of the information above is also drawn from actual writing samples of tengwar, the most notable being Tolkien’s rendering of the <i>Namárië</i> poem in tengwar in <i>The Road Goes Ever On</i>, a book Tolkien published in 1967 in collaboration with Donald Swann putting many of Tolkien’s poems to music. Tolkien experimented with various ways to write Quenya using tengwar, and the system described in this course is largely based on the system he used for the <i>Namárië</i> poem.</p>
 
-<p>There are other ways to write tengwar, though, far too many for an introductory course like this. Måns Björkman’s web site Amanyë Tenceli (<a href="http://at.mansbjorkman.net/teng_quenya.htm">http://at.mansbjorkman.net/teng_quenya.htm</a>) is the best available resource on tengwar usage, so I recommend looking there if you want to learn more.</p>
+<p>There are other ways to write tengwar, though, far too many for an introductory course like this. Måns Björkman’s web site Amanyë Tenceli (<a href="http://at.boktypografen.se/teng_quenya.htm">http://at.boktypografen.se/teng_quenya.htm</a>) is the best available resource on tengwar usage, so I recommend looking there if you want to learn more.</p>
 </div>
 
 <h2><a id="c4-1-6"></a>4.1.6 Simplified Tengwar Summary</h2>
@@ -628,7 +628,7 @@ Red tehta don’t work in safari
 
 <p>The tengwar exercises in this course are optional. You can understand and use Quenya as a language without learning its writing system. In fact, most people who write Quenya do so with Latin letters, simply because they are so much easier to type. This course doesn’t teach you how to type tengwar, which is also quite complicated and depends on which tengwar fonts you use. It assumes if you are going to do tengwar exercises, you will do them by hand.</p>
 
-<p>Many people do enjoy using tengwar for Elvish writing, though, especially when writing by hand, so the course teaches tengwar and does include some exercises to let you practice it if you want. You could, for example, skip all the tengwar exercises your first time through the course, then come back and redo those exercises later for extra practice.</p>
+<p>Many people do enjoy using tengwar for Elvish writing, though, especially when writing by hand, so the course includes some exercises to let you practice it if you want. You could, for example, skip all the tengwar exercises your first time through the course, then come back and redo those exercises later for extra practice.</p>
 
 <p>For this exercise, transcribe the following Quenya phrases to tengwar, and then translate them to English. Pay special attention to (a) words that use letters from their archaic pronunciation and (b) letters for sounds that are different based on their position in the word.</p>
 
@@ -1172,7 +1172,7 @@ Red tehta don’t work in safari
 <p><a id="c4-4-1-11"></a><b>4.4.1.11 Pasts with <i>y, w</i>:</b> Roots with Y and W only rarely form basic verbs, but there are some nasal-suffixed past tenses from Y- and W-roots appearing as the strong pasts of derived verbs (see later in this chapter for a discussion of strong pasts).</p>
 
 <ul>
-<li><i>coita-</i> “to live” → <i>coinë</i> “lived” from √<i>KOY</i> (PE22/103, 152).</li>
+<li><i>coita-</i> “to live (is alive)” → <i>coinë</i> “lived (was alive)” from √<i>KOY</i> (PE22/103, 152).</li>
 <li><i>lauta-</i> “to abound” → <i>launë</i> “abounded” from √<i>LAW</i> (PE22/103).</li>
 </ul>
 
@@ -1211,8 +1211,8 @@ Red tehta don’t work in safari
 <ul><li><i>pa.t.</i> <b>cambë</b> “received”</li></ul></li>
 <li><b>ces-</b> [<i>þ</i>] <i>v.</i> “to search, examine”
 <ul><li><i>pa.t.</i> <b>censë</b> [<i>þ</i>] “searched, examined”</li></ul></li>
-<li><b>coita-</b> <i>v.</i> “to live”
-<ul><li><i>pa.t.</i> <b>coinë</b> “lived”</li></ul></li>
+<li><b>coita-</b> <i>v.</i> “to live (is alive)”
+<ul><li><i>pa.t.</i> <b>coinë</b> “lived (was alive)”</li></ul></li>
 <li>#<b>hlar-</b> <i>v.</i> “to hear”
 <ul><li><i>pa.t.</i> ^<b>hlassë</b> “heard”</li></ul></li>
 <li><b>lah-</b> <i>v.</i> “to kick”
@@ -1316,7 +1316,7 @@ Red tehta don’t work in safari
 </ul></li>
 <li><b>Strong pasts from <i>y, w</i>:</b> These arise mainly as strong pasts of derived verbs, but are fairly common:
 <ul>
-<li><i>coita-</i> “to live” → <i>coinë</i> “lived” from √<i>KOY</i>.</li>
+<li><i>coita-</i> “to live” → <i>coinë</i> “lived (was alive)” from √<i>KOY</i>.</li>
 <li><i>lauta-</i> “to abound” → <i>launë</i> “abounded” from √<i>LAW</i>.</li>
 </ul></li>
 </ul>
@@ -1422,8 +1422,6 @@ Red tehta don’t work in safari
 
 <ul class="vocab-list">
 <li><b>cala</b> <i>n.</i> “light”</li>
-<li><b>calta-</b> <i>v.</i> “to kindle”
-<ul><li><i>pa.t.</i> <b>caltanë</b> “kindled”</li></ul></li>
 <li><b>calima</b> <i>adj.</i> “bright”</li>
 <li><b>cemen</b> <i>n.</i> “earth” ¹</li>
 <li><b>helcë</b> <i>n.</i> “ice”</li>
@@ -1440,6 +1438,8 @@ Red tehta don’t work in safari
 <li><b>ringa</b> <i>adj.</i> “cold”</li>
 <li><b>ringë</b> (<b>ringi-</b>) <i>n.</i> “cold”</li>
 <li><b>sar</b> (<b>sarn-</b>) <i>n.</i> “(small) stone”</li>
+<li><b>tinta-</b> <i>v.</i> “to kindle”
+<ul><li><i>pa.t.</i> *<b>tintanë</b> “kindled”</li></ul></li>
 <li><b>ul-</b> <i>v.</i> “to rain (impersonal)” ¹
 <ul><li><i>pa.t.</i> *<b>úlë</b> “rained”</li></ul></li>
 <li><b>ulo</b> (<b>ulu-</b>) <i>n.</i> “rain”</li>
@@ -1703,8 +1703,8 @@ like gulls wailing?
 <ul><li><i>pa.t.</i> <b>cambë</b> “received”</li></ul></li>
 <li><b>ces-</b> [<i>þ</i>] <i>v.</i> “to search, examine”
 <ul><li><i>pa.t.</i> <b>censë</b> [<i>þ</i>] “searched, examined”</li></ul></li>
-<li><b>coita-</b> <i>v.</i> “to live”
-<ul><li><i>pa.t.</i> <b>coinë</b> “lived”</li></ul></li>
+<li><b>coita-</b> <i>v.</i> “to live (is alive)”
+<ul><li><i>pa.t.</i> <b>coinë</b> “lived (was alive)”</li></ul></li>
 <li>#<b>hlar-</b> <i>v.</i> “to hear”
 <ul><li><i>pa.t.</i> ^<b>hlassë</b> “heard”</li></ul></li>
 <li><b>lah-</b> <i>v.</i> “to kick”
@@ -1739,8 +1739,6 @@ like gulls wailing?
 
 <ul class="vocab-list">
 <li><b>cala</b> <i>n.</i> “light”</li>
-<li><b>calta-</b> <i>v.</i> “to kindle”
-<ul><li><i>pa.t.</i> <b>caltanë</b> “kindled”</li></ul></li>
 <li><b>calima</b> <i>adj.</i> “bright”</li>
 <li><b>cemen</b> <i>n.</i> “earth” ¹</li>
 <li><b>helcë</b> <i>n.</i> “ice”</li>
@@ -1757,6 +1755,8 @@ like gulls wailing?
 <li><b>ringa</b> <i>adj.</i> “cold”</li>
 <li><b>ringë</b> (<b>ringi-</b>) <i>n.</i> “cold”</li>
 <li><b>sar</b> (<b>sarn-</b>) <i>n.</i> “(small) stone”</li>
+<li><b>tinta-</b> <i>v.</i> “to kindle”
+<ul><li><i>pa.t.</i> *<b>tintanë</b> “kindled”</li></ul></li>
 <li><b>ul-</b> <i>v.</i> “to rain (impersonal)” ¹
 <ul><li><i>pa.t.</i> *<b>úlë</b> “rained”</li></ul></li>
 <li><b>ulo</b> (<b>ulu-</b>) <i>n.</i> “rain”</li>
@@ -2063,7 +2063,7 @@ like gulls wailing?
 <li><i>Nárë úra.</i></li>
 <li><i>Nén linquë.</i></li>
 <li><i>Helcë ringa.</i></li>
-<li><i>Á calta nárë, mecin.</i></li>
+<li><i>Á tinta nárë, mecin.</i></li>
 <li><i>I vista lauca i coässë.</i></li>
 <li><i>Olvar alar cemenessë.</i></li>
 </ol>
@@ -2074,7 +2074,7 @@ like gulls wailing?
 <li><span class="transcribe" data-lang="q" data-value="Nárë úra">Nárë úra</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Nén linquë">Nén linquë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Helcë ringa">Helcë ringa</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Á calta nárë mecin">Á calta nárë, mecin</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Á tinta nárë mecin">Á tinta nárë, mecin</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I vista lauca i coässë">I vista lauca i coässë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Olvar alar cemenessë">Olvar alar cemenessë</span></li>
 </ol>
