--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
@@ -210,7 +210,7 @@
 <li><b><a href="#c5-1-2-3">5.1.2.3 The s-hook</a></b></li>
 </ul>
 
-<p><a id="c5-1-2-1"></a><b>5.1.2.1 The y-tehta:</b> In our discussion of tengwar for unitary tengwar consonants, there were two signs with a pair of underdots <span class="tengwar">&#160;&#207;</span> (<i>unutixi</i>) to indicate a “y” sound: <span class="tengwar">hÍ</span> = <i>y</i> and <span class="tengwar">9Í</span> = <i>hy</i>. These y-tehta underdots can be applied to other tengwar as well: <i>ty, ndy, nty, ny, ry, ly</i> = <span class="transcribe" data-lang="q" data-value="ty ndy nty ny ry ly">ty ndy nty ny ry ly</span>.</p>
+<p><a id="c5-1-2-1"></a><b>5.1.2.1 The y-tehta:</b> In our discussion of tengwar for unitary tengwar consonants from Chapter 4, there were two signs with a pair of underdots <span class="tengwar">&#160;&#207;</span> (<i>unutixi</i>) to indicate a “y” sound: <span class="tengwar">hÍ</span> = <i>y</i> and <span class="tengwar">9Í</span> = <i>hy</i>. These y-tehta underdots can be applied to other tengwar as well: <i>ty, ndy, nty, ny, ry, ly</i> = <span class="transcribe" data-lang="q" data-value="ty ndy nty ny ry ly">ty ndy nty ny ry ly</span>.</p>
 
 <p>In <i>The Lord of the Rings</i> Appendix E, the tengwar table had four series (columns): the <i>tincotéma</i>, <i>parmatéma</i>, <i>calmatéma</i> and <i>quessetéma</i>, named after the first tengwa in each series. But Tolkien mentioned a fifth series <i>tyelpetéma</i>, a palatal series incorporating these y-tehta underdots. Combining the Appendix E table with the <i>tyelpetéma</i> gives us a more complete tengwar table for Quenya usage, especially if we add in the tengwar for consonant-clusters that were discussed previously:</p>
 
@@ -331,7 +331,7 @@
 </ul>
 
 <div class="advanced-topic">
-<p>The <i>tyelpetéma</i> was mentioned in Appendix E but was not described in detail. The tengwar names in this series are from a document on <i>The Feanorian Alphabet</i> from the 1940s (PE22/42-53), except for the names of <span class="transcribe" data-lang="q" data-value="y">y</span> or <span class="transcribe" data-lang="q" data-value="hy">hy</span> which are my inventions and are merely descriptive.</p>
+<p>The <i>tyelpetéma</i> series was mentioned in Appendix E but was not described in detail. The tengwar names in this series are from a document on <i>The Feanorian Alphabet</i> from the 1940s (PE22/42-53), except for the names of <span class="transcribe" data-lang="q" data-value="y">y</span> or <span class="transcribe" data-lang="q" data-value="hy">hy</span> which are my inventions and are merely descriptive.</p>
 </div>
 
 <p><a id="c5-1-2-2"></a><b>5.1.2.2 The long-tehta:</b> There is a special tehta for a double consonant, the long-tehta (<i>anda-tehta</i>) <span class="tengwar">&#160;&#160;'</span>, a bar which appears under the tengwar (or inside in the case of <i>l</i>: <span class="tengwar">j¸</span>). This can be used for <i>cc, ll, mm, nn, pp, rr, tt</i> = <span class="transcribe" data-lang="q" data-value="cc ll mm nn pp rr tt">cc ll mm nn pp rr tt</span>. It is not used for <i>ss</i>, which has its own special sign, <i>essë</i> (<span class="tengwar">k ,</span>). Examples of use include:</p>
@@ -387,7 +387,7 @@
 <p>Unlike English punctuation marks, there is usually a space both before and after the mark, so it stands alone.</p>
 
 <div class="advanced-topic">
-<p>The tengwar punctuation marks are based on various writings samples from Tolkien. My source for this (and much of my other tengwar information) is the site Amanye Tenceli: <a href="http://at.mansbjorkman.net">http://at.mansbjorkman.net</a>. Many more details can be found there, including alternate tengwar and alternate writing modes that are not discussed in this course.</p>
+<p>The tengwar punctuation marks are based on various writings samples from Tolkien. My source for this (and much of my other tengwar information) is the site Amanye Tenceli: <a href="http://at.boktypografen.se">http://at.boktypografen.se</a>. Many more details can be found there, including alternate tengwar and alternate writing modes that are not discussed in this course.</p>
 </div>
 
 <h2><a id="c5-1-4"></a>5.1.4 Vocabulary: Tengwar Names II</h2>
@@ -577,7 +577,7 @@
 <li><i>Aran i ardo tirnë i atani mindonyallo.</i></li>
 </ol>
 
-<p>For additional tengwar practice, you can repeat the exercises from earlier in the course, but write the answers in tengwar instead of Latin letters. You can do the same for future exercise. All the exercises have a set of (optional) tengwar answers.</p>
+<p>For additional tengwar practice, you can repeat the exercises from earlier in the course, but write the answers in tengwar instead of Latin letters. You can do the same for future exercises. All the exercises have a set of (optional) tengwar answers.</p>
 
 <p>Answers are in <a href="#a5-1">Answer Key 5.1</a> at the end of this chapter.</p>
 
@@ -603,7 +603,7 @@
 <li><b><a href="#c5-2-1-4">5.2.1.4 Other Dual Constructions</a></b></li>
 </ul>
 
-<p><a id="c5-2-1-1"></a><b>5.2.1.1 Origin of the Dual:</b> The dual itself dates back to ancient Elvish where natural pairs receive a special u-suffix, analogous to the ancient plural i-suffix. This u-suffix replaced the final vowel of the noun, if any (PE21/66; Let/427). There was a second ancient dual suffix <i>-t</i> (derived from <i>-ata</i> related to <i>atta</i> “two”) which was used for arbitrary pairs as well as in inflectional elements, including verb inflections. For example, in ancient Elvish you might say ✶<i>talū</i> for “a pair of feet” (✶<i>tal</i> + <i>ū</i>) but ✶<i>eledā’ta</i> for “a couple of Elves” (PE21/73); note that ancient ✶<i>eledā</i> became Q. <i>elda</i> “Elf”. Tolkien described both suffixes in a brief footnote in a letter written in 1972:</p>
+<p><a id="c5-2-1-1"></a><b>5.2.1.1 Origin of the Dual:</b> The dual itself dates back to ancient Elvish where natural pairs receive a special u-suffix, analogous to the ancient plural i-suffix. This u-suffix replaced the final vowel of the noun, if any (PE21/66; Let/427). There was a second ancient dual suffix <i>-t</i> (derived from <i>-ata</i> related to <i>atta</i> “two”) which was used for arbitrary pairs as well as in inflectional elements, including verb inflections. For example, in ancient Elvish you might say ✶<i>talū</i> for “a pair of feet” (✶<i>tal</i> + <i>ū</i>) but ✶<i>eledā’ta</i> for “a couple of Elves” (PE21/73); note that ancient ✶<i>eledā</i> became Q. <i>elda</i> “Elf”. Tolkien described both suffixes in a brief footnote to a letter written in 1972:</p>
 
 <blockquote>Original[ly] the Q. duals were (a) purely numerative (element <i>ata</i>) and pairs (element <i>ū</i> as seen in <i>Aldūya</i>); but they were normally in later Q. only usual with reference to natural pairs, and the choice of <i>t</i> or <i>u</i> [was] decided by euphony, e.g. <i>ū</i> was preferred after <i>d/t</i> in stem (Let/427).</blockquote>
 
@@ -988,7 +988,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <li>The suffix <i>-ië</i> is added, replacing the final vowel if any.</li>
 </ul>
 
-<p>Some examples:</p>
+<p>Recall that the base vowel of a verb is its first vowel, ignoring any prefixes. Some examples:</p>
 
 <ul>
 <li><i>mat-</i> “to eat” → <i>amátië</i> “has eaten” (PE17/76).</li>
@@ -1176,7 +1176,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <p>The adverb <i>ú</i> “not” can be used as a general negator in circumstances where the negative verb <i>ui-</i> is inconvenient.</p>
 
 <div class="advanced-topic">
-<p><a id="c5-5-1-4"></a><b>5.5.1.4 How do we know this?</b> The basic <i>u</i>-negation system described above is based on a description of it written around 1959 (PE17/143-144), from a document where Tolkien rejected <i>la</i>-negation entirely in favor of <i>u</i>-negation. In this 1959 note, the negative verb was <i>ua-</i>, but in notes from 1967 and 1968 he used <i>ui-</i> for the negative verb instead (PE17/68; VT49/29), which is the form we use above. In one note from 1969 it seems he used <i>ú</i> by itself as the negative element (VT49/7-8) in the so-called Ambidexters Sentence, which we will look at in <a href="eldamo-intro-quenya-07.html#c7-5">Chapter 7, Section §7.5</a>.</p>
+<p><a id="c5-5-1-4"></a><b>5.5.1.4 How do we know this?</b> The basic <i>u</i>-negation system described above is based on a description of it written around 1959 (PE17/143-144), from a document where Tolkien rejected <i>la</i>-negation entirely in favor of <i>u</i>-negation. In this 1959 note, the negative verb was <i>ua-</i>, but in notes from 1967 and 1968 he used <i>ui-</i> for the negative verb instead (PE17/68; VT49/29), which is the form we use above. In a set of notes from 1969 it seems he used <i>ú</i> by itself as the negative element (VT49/7-8) in the so-called Ambidexters Sentence, which we will look at in <a href="eldamo-intro-quenya-07.html#c7-5">Chapter 7, Section §7.5</a>.</p>
 
 <p>Note that the negative prefix <i>ú-</i> was still prevalent in periods where Tolkien favored <i>la</i>-negation, but in these periods largely (or evenly exclusively) had a “bad” connotation. In periods where Tolkien favored <i>u</i>-negation, the prefix was more neutral in meaning.</p>
 </div>
@@ -1242,7 +1242,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <p><a id="c5-5-3-1"></a><b>5.5.3.1 Negative imperatives with <i>vá</i>:</b> As discussed in <a href="eldamo-intro-quenya-03.html#c3-4-2">Chapter 3, Section §3.4.2</a>, the basic Quenya marker for commands (the imperative) is <i>á</i>, as in <i>á matë</i> “eat!” or “do eat!”. The negative imperative marker is <i>áva</i> “don’t”, as in <i>áva matë</i> “don’t eat!”. The curt negative imperative form <i>avá</i> “don’t!” (stressed on the final syllable: “ah-VAHH”) can be used for urgent commands to stop something.</p>
 
-<p>The particle <i>vá</i> can also be used in <u>response</u> to commands, in which case it indicates refusal, as in <i>vá</i> “[I] won’t”, or more fully <i>ván(ye)</i> “I won’t” or <i>válmë</i> “we won’t”. The latter will be exclusive <i>-lmë</i> if the person addressed is commanding a distinct group that is refusing them, but might be <i>válvë</i> if the person addressed is part of a debate inside a group making a collective decision. This peculiar use of the same element for both “don’t” and “won’t” has to do with the base meaning of its root. The primitive element BA indicates denial from the perspective of what the speaker wants. Thus, when addressed to another as a command, it indicates forbiddance. But when given in response to a command it indicates refusal.</p>
+<p>The particle <i>vá</i> can also be used in <u>response</u> to commands, in which case it indicates refusal, as in <i>vá</i> “[I] won’t”, or more fully <i>ván(ye)</i> “I won’t” or <i>válmë</i> “we won’t”. The latter will be exclusive <i>-lmë</i> if the person addressed is distinct from the group that is refusing the request, but might be <i>válvë</i> if the person addressed is part of a debate inside a group making a collective decision. This peculiar use of the same element for both “don’t” and “won’t” has to do with the base meaning of its root. The primitive element BA indicates denial from the perspective of what the speaker wants. Thus, when addressed to another as a command, it indicates forbiddance. But when given in response to a command it indicates refusal.</p>
 
 <p>As such, using <i>vá</i> with 2nd or 3rd person pronouns indicates forbiddance: <i>válye</i> “you are not to do”, <i>vás(së)</i> “he mustn’t”. But such formations are rarely used; the less ambiguous verbs <i>váquet-</i> “to forbid” and <i>apta-</i> “to refuse” are used more often instead.</p>
 
