--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
@@ -117,7 +117,7 @@
 
 <p>The word <i>tenna</i> “until” appears before the word <i>Ambar</i> “World”. Since the next word begins with the same vowel, the final vowel of <i>tenna</i> disappears, leaving <i>tenn’ Ambar-metta</i>. The vowels don’t necessarily have to be the same, though: we also saw elision with <i>elen síla lúmenn’ omentielvo</i> “A star shines on the hour of our meeting” (LotR/81) in <a href="eldamo-intro-quenya-01.html#c1-4">Chapter 1, Section §1.4</a>. In this example, the final <i>a</i> of <i>lúmenna</i> “upon the hour” is lost before the vowel <i>o</i>.</p>
 
-<p>Elision is most common in the following circumstances:</p>
+<p>Circumstances in which elision occurs include:</p>
 
 <ul>
 <li>With two-syllable prepositions like <i>ara</i> “beside”: <i>ar’ i mindon</i> “beside the tower”.</li>
@@ -158,7 +158,7 @@
 
 <p>In general, the final vowel is lost and any long vowel in the non-final syllable is shortened. If the result is a final consonant cluster, that cluster is also reduced but is restored in the stem form. For example <i>quendë</i> is an older word for “elf”, which in compounds reduces to <i>-quen</i> as in <i>Moriquen</i> (<i>Moriquend-</i>) “Dark elf”. Something similar happens with <i>már</i> “home”, whose vowel also shortens in the final syllables of compounds: <i>Eldamar</i> “Elf-home”, <i>Valimar</i> “Vali-home”.</p>
 
-<p><a id="c6-1-2-2"></a><b>6.1.2.2 Vowel shortening in suffixed words:</b> When directional suffixes are added to longer words whose second-to-last syllable has a long vowel, that long vowel tends to shorten, as in <i>Endorenna</i> “to Middle-earth”, from <i>Endórë</i> “Middle-earth”. That’s because Quenya generally dislikes having adjacent heavy syllables, and one of the heavy syllables can be easily eliminated by shortening the vowel. This doesn’t happen with shorter words: <i>márenna</i> “to home”.</p>
+<p><a id="c6-1-2-2"></a><b>6.1.2.2 Vowel shortening in suffixed words:</b> When directional suffixes are added to longer words whose second-to-last syllable has a long vowel, that long vowel tends to shorten, as in <i>Endorenna</i> “to Middle-earth”, from <i>Endórë</i> “Middle-earth”. That’s because Quenya generally dislikes having adjacent heavy syllables, and one of the heavy syllables can be easily eliminated by shortening the vowel. This doesn’t happen with shorter words: <i>lúmenna</i> “upon [the] hour”.</p>
 
 <p><a id="c6-1-2-3"></a><b>6.1.2.3 Long-voweled monosyllables:</b> In some cases reducing the long vowel is not practical, especially in monosyllables like <i>ná</i> “to be” or <i>vá</i> “don’t/won’t” where the long vowel is characteristic of the word. In such cases, the vowel may remain long, even when suffixes with consonant clusters are added: <i>nántë</i> “they are”, <i>válmë</i> “we won’t”. Short-vowel variants are also possible if the word is deemphasized: <i>nantë, valmë</i>.</p>
 
@@ -171,7 +171,7 @@
 
 <blockquote>When stem of noun or verb is long &amp; long [?markers], double cons. was simplified after change of <i>s</i> &gt; <i>z</i>. So <i>nê-sse</i> for <i>nesse</i> has <i>nēse</i> (VT49/28).</blockquote>
 
-<p>Likewise for the retention of the long vowel in <i>má</i> with possessive suffixes, in a discussion of the negative verb <i>lá</i>:</p>
+<p>Likewise for the retention of the long vowel in <i>má</i> with possessive suffixes, as mentioned in a discussion of the negative verb <i>lá</i>:</p>
 
 <blockquote><i>lá</i> is usually shortened to <i>la</i> before 2 consonants, according to the usual Q. procedure, but the long vowel can be retained, especially for additional emphasis, as in other cases where pronominal affixes follow a long vowel, as in <i>márya</i> “his hand” (PE22/160).</blockquote>
 
@@ -188,7 +188,7 @@
 <li class="advanced-topic"><b><a href="#c6-1-3-5">6.1.3.5 How do we know this?</a></b></li>
 </ul>
 
-<p>Prosodic lengthening is a phenomenon that causes vowels to lengthen and is tied to stress. Like stress, prosodic lengthening depends on whether the syllables in a word are <u>heavy</u> (with a long vowel, diphthong or two following consonants) or <u>light</u> (with a short vowel and a single consonant, or just a short vowel). This section discusses the basic mechanisms of prosodic lengthening; later sections will discuss the phenomenon along with the suffixes that are likely to cause it.</p>
+<p>Prosodic lengthening is a phenomenon that causes vowels to lengthen and is related to stress. Like stress, prosodic lengthening depends on whether the syllables in a word are <u>heavy</u> (with a long vowel, diphthong or two following consonants) or <u>light</u> (with a short vowel and a single consonant, or just a short vowel). This section discusses the basic mechanisms of prosodic lengthening; later sections will discuss the phenomenon along with the suffixes that are likely to cause it.</p>
 
 <p><a id="c6-1-3-1"></a><b>6.1.3.1 Conditions Causing Vowel Lengthening:</b> Just as Quenya dislikes having two adjacent heavy syllables, Quenya also dislikes having too many light syllables in a row. Such a sequence of short-vowel syllables can occur when suffixes are added to a longer word. Vowel lengthening can be triggered when the base word is trisyllabic or longer, and one of the following is also true:</p>
 
@@ -301,7 +301,7 @@
 <ul>
 <li>The base word is three or more syllables long.</li>
 <li>The word ends in a vowel and the suffix begins with a single consonant: <i>telumë</i> + <i>-va</i> → <i>telum<u>é</u>va</i>.</li>
-<li>Alternately, the word ends in a single consonant and the suffix begins with a vowel (possible followed by one consonant): <i>Atanatar</i> + <i>-i</i> → <i>Atanat<u>á</u>ri</i>.</li>
+<li>Alternately, the word ends in a single consonant and the suffix begins with a vowel (possibly followed by one consonant): <i>Atanatar</i> + <i>-i</i> → <i>Atanat<u>á</u>ri</i>.</li>
 <li>The second-to-last syllable of the base word cannot be stressed:
 <ul>
 <li><i>telumë</i> + <i>-li</i> → <i>telum<u>é</u>li</i> but <i>falassë</i> + <i>-li</i> → <i>falasseli</i></li>
@@ -579,7 +579,7 @@
 
 <ul>
 <li>Ownership of a thing: <i>macil atanwa</i> “a man’s sword”, <i>róma Oroméva</i> “horn of [belonging to] Oromë”.</li>
-<li>An adjectival description of something: <i>alcar i aranwa</i> “glory of the king = the king’s glory”, <i>aran eldaiva</i> “king of the Elves = Elvish king”.</li>
+<li>An adjectival description of something: <i>i alcar aranwa</i> “the glory of [the] king = the king’s glory”, <i>aran eldaiva</i> “king of the Elves = Elvish king”.</li>
 </ul>
 
 <p>The possessive typically follows the noun it is related to, but may precede it also: <i>i atanwa macil</i> “the man’s sword”.</p>
@@ -731,7 +731,7 @@
 
 <ul>
 <li>Ownership of a thing: <i>macil atanwa</i> “a man’s sword”, <i>róma Oroméva</i> “horn of [belonging to] Oromë”.</li>
-<li>An adjectival description of something: <i>alcar i aranwa</i> “glory of the king = the king’s glory”, <i>aran eldaiva</i> “king of the Elves = Elvish king”.</li>
+<li>An adjectival description of something: <i>i alcar aranwa</i> “the glory of [the] king = the king’s glory”, <i>aran eldaiva</i> “king of the Elves = Elvish king”.</li>
 </ul>
 
 <p>This second descriptive use is often interchangeable with the genitive. The main distinction in descriptive use is that <i>-va</i> tends to be used for innate attributes, while <i>-o</i> is used of attributes applicable in the moment: <i>alcar Oromëo</i> = “Orome’s glory (in the moment)” vs. <i>alcar Oroméva</i> = “Orome’s (inherent) glory”.</p>
@@ -836,7 +836,7 @@
 
 <p>Note that the <i>i</i> in the Quenya sentence above is not the definite article, but rather is the indeclinable relative pronoun <i>i</i> “who, which, that”.</p>
 
-<p><a id="c6-4-1-3"></a><b>6.4.1.3 Forms of the Definite Article:</b> The definite article almost always has the form <i>i</i>, and it is generally resistent to elision because otherwise it would vanish entirely. It often causes elision for preceding vowels, however: <i>ar’ i mindon</i> “beside the tower”, <i>á mat’ i massa</i> “eat the bread”. There is also an alternate form of the definite article <i>in</i> which is used occasionally. We only have a couple examples of its use in Tolkien’s later writings:</p>
+<p><a id="c6-4-1-3"></a><b>6.4.1.3 Forms of the Definite Article:</b> The definite article almost always has the form <i>i</i>, and it is generally resistent to elision because otherwise it would vanish entirely. It sometimes causes elision for preceding vowels, however: <i>ar’ i mindon</i> “beside the tower”, <i>á mat’ i massa</i> “eat the bread”. There is also an alternate form of the definite article <i>in</i> which is used occasionally. We only have a couple examples of its use in Tolkien’s later writings:</p>
 
 <ul>
 <li><i>Mana i coimas <u>in</u> Eldaron?</i> “What is the ‘coimas’ [waybread] of the Eldar?” (PM/403).</li>
@@ -1614,7 +1614,7 @@ and of the One who is above all thrones for ever.
 
 <ul>
 <li>Ownership of a thing: <i>macil atanwa</i> “a man’s sword”, <i>róma Oroméva</i> “horn of [belonging to] Oromë”.</li>
-<li>An adjectival description of something: <i>alcar i aranwa</i> “glory of the king = the king’s glory”, <i>aran eldaiva</i> “king of the Elves = Elvish king”.</li>
+<li>An adjectival description of something: <i>i alcar aranwa</i> “the glory of [the] king = the king’s glory”, <i>aran eldaiva</i> “king of the Elves = Elvish king”.</li>
 </ul>
 
 <p>This second descriptive use is often interchangeable with the genitive. The main distinction in descriptive use is that <i>-va</i> tends to be used for innate attributes, while <i>-o</i> is used of attributes applicable in the moment: <i>alcar Oromëo</i> = “Orome’s glory (in the moment)” vs. <i>alcar Oroméva</i> = “Orome’s (inherent) glory”.</p>
