--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
@@ -180,7 +180,7 @@
 
 <p>Most Neo-Quenya writers use <i>-rya</i> “his, her” for the 3rd. sg. possessive and <i>-nta</i> (or its alternative <i>-lta</i>) “their” for the 3rd pl. possessive, but according to Tolkien this was not how most speakers used Quenya at the end of the First Age:</p>
 
-<blockquote>The 3rd sg. remained aberrant and gave later trouble. The full O[old] Q[uenya] forms <i>-sjā</i> &gt; <i>sya</i> became <i>zya</i> and in Q. <i>-rya</i>. This still survived in Q. as a “correct” form, and was used in writing, especially formal or poetic. But <i>-rya</i> now suggested plurality, as if <i>ya</i> had been added to <i>-r</i> plural. In colloquial Q. it thus became used for the plural replacing the “archaic” <i>-ntya</i> [sic., as opposed to the <i>-nta</i> suffix used in this course], and in the sg. the <i>r</i> was dropped. The continued existence of such forms as <i>talya</i> “his foot” assisted this (VT49/17).</blockquote>
+<blockquote>The 3rd sg. remained aberrant and gave later trouble. The full O[ld] Q[uenya] forms <i>-sjā</i> &gt; <i>sya</i> became <i>zya</i> and in Q. <i>-rya</i>. This still survived in Q. as a “correct” form, and was used in writing, especially formal or poetic. But <i>-rya</i> now suggested plurality, as if <i>ya</i> had been added to <i>-r</i> plural. In colloquial Q. it thus became used for the plural replacing the “archaic” <i>-ntya</i> [sic., as opposed to the <i>-nta</i> suffix used in this course], and in the sg. the <i>r</i> was dropped. The continued existence of such forms as <i>talya</i> “his foot” assisted this (VT49/17).</blockquote>
 
 <p>In other words, the presence of <i>r</i> [originally derived from ancient <i>s</i>] in 3rd sg. <i>-rya</i> felt like a plural in modern Quenya speech of the First Age, and so took over the function of the 3rd pl. possessive <i>-nta</i> (or <i>-lta</i>). Thus “their hand” [one each] became <i>márya</i> (PE17/130). Meanwhile, the sg. suffix became <i>-ya</i>, generalized from the form used after consonants, becoming <i>máya</i> “his/her hand” as with <i>talya</i> “his/her foot” (PE17/130).</p>
 
@@ -220,8 +220,8 @@
 
 <ul class="vocab-list">
 <li><b>alfírima</b> <i>adj.</i> “immortal”</li>
-<li><b>coita-</b> <i>v.</i> “to live”
-<ul><li><i>pa.t.</i> <b>coinë</b> “lived”</li></ul></li>
+<li><b>coita-</b> <i>v.</i> “to live (is alive)”
+<ul><li><i>pa.t.</i> <b>coinë</b> “lived (was alive)”</li></ul></li>
 <li><b>fir-</b> <i>v.</i> “to die (naturally)” ¹
 <ul><li><i>pa.t.</i> *<b>firnë</b> “died (naturally)”</li></ul></li>
 <li><b>fírië</b> <i>n.</i> “(natural) death”</li>
@@ -373,7 +373,7 @@
 <li><i>ná-</i> “to be” → <i>návë</i> “being”.</li>
 </ul>
 
-<p>The Quenya gerund is similar to the English suffix “-ing”, which is likewise used to form nouns from verbs, as indicated above. The Quenya gerund is a true noun and can take noun cases, as in <i>mindon ceniéno</i> “tower of seeing”: <i>cenië</i> “seeing” + genitive <i>-(n)o</i> “of”. This includes possessive suffixes, such as <i>antiëlya</i> “your giving” = <i>antië</i> “giving” + <i>-lya</i> “your”. However, the gerund cannot take object suffixes because it is not truly verbal. Thus **<i>carielyas</i> “your doing it” is wrong, and such a formation requires a particular infinitive construction like <i>caritalyas</i> above instead.</p>
+<p>The Quenya gerund is similar to the English suffix “-ing”, which is likewise used to form nouns from verbs, as indicated above. The Quenya gerund is a true noun and can take noun cases, as in <i>mindon ceniéno</i> “tower of seeing”: <i>cenië</i> “seeing” + genitive <i>-(n)o</i> “of”. This includes possessive suffixes, such as <i>antielya</i> “your giving” = <i>antië</i> “giving” + <i>-lya</i> “your”. However, the gerund cannot take object suffixes because it is not truly verbal. Thus **<i>carielyas</i> “your doing it” is wrong, and such a formation requires a particular infinitive construction like <i>caritalyas</i> above instead.</p>
 
 <p><a id="c7-2-2-2"></a><b>7.2.1.2 Gerund Use:</b> Gerunds can be used like any other noun, the main exception being that they cannot (for the most part) be made plural. For example:</p>
 
@@ -402,7 +402,7 @@
 
 <blockquote>In all cases where the second verb is the subject of the first (by the first meaning the finite verb irrespective of the actual word order) the infinitive cannot be used. The Gerund is then used ... The Gerund is also usually employed when the second verb though not the subject of the first is not the direct object; e.g. when it requires substantival declension. The infinitive cannot be declined. The gerund cannot take pronominal affixes (PE22/119).</blockquote>
 
-<p>In the system described in QVS, infinitives cannot be declined into noun cases, and genitives cannot receive the pronominal subject and object affixes used with verbs, though possessive suffixes are allowed. Furthermore, in QVS an infinitive can only be a verbal object and not a verbal subject. Despite this statement, there is at least one example in Tolkien’s later writing where an infinitive is used as a subject: <i>carë mára quí tyarë naxa</i> “doing [to do] good may cause evil” (PE22/154); here <i>carë mára</i> “to do good” is the subject of the verb <i>tyarë</i> “cause”. Such constructions can be confusing, and I assume their usage is rare and that the gerund is more usual: <i>carië mára quí tyarë naxa</i>.</p>
+<p>In the system described in QVS, infinitives cannot be declined into noun cases, and gerunds cannot receive the pronominal subject and object affixes used with verbs, though possessive suffixes are allowed. Furthermore, in QVS an infinitive can only be a verbal object and not a verbal subject. Despite this statement, there is at least one example in Tolkien’s later writing where an infinitive is used as a subject: <i>carë mára quí tyarë naxa</i> “doing [to do] good may cause evil” (PE22/154); here <i>carë mára</i> “to do good” is the subject of the verb <i>tyarë</i> “cause”. Such constructions can be confusing, and I assume their usage is rare and that the gerund is more usual: <i>carië mára quí tyarë naxa</i>.</p>
 
 <p>As for the particular infinitive, that construction is mentioned in <i>Late Notes on Verb Structure</i> (LVS) written in 1969:</p>
 
@@ -605,7 +605,7 @@
 
 <h2><a id="c7-3-5"></a>7.3.5 Instrumental Case</h2>
 
-<p>The instrumental noun case is used to describe the means by which an action occurs. It is generally translated using the English prepositions “with” or “by”, but only in the sense “by means of”; the sense “together with” uses the preposition <i>ó</i> and the sense “by = beside” uses the preposition <i>ara</i>. The instrumental is formed using the suffix <i>-nen</i>, which combines with dual and plural suffixes as follows:</p>
+<p>The instrumental noun case is used to describe the means by which an action occurs. It is generally translated using the English prepositions “with” or “by”, but only in the sense “by means of”. The sense “together with” uses the preposition <i>ó</i> and the sense “by = beside” uses the preposition <i>ara</i>. The instrumental is formed using the suffix <i>-nen</i>, which combines with dual and plural suffixes as follows:</p>
             
 <ul>
 <li>For vocalic nouns, the suffix <i>-nen</i> is used in the singular and <i>-inen</i> in the plural.</li>
@@ -682,7 +682,7 @@
 <li>Note ¹: The prepositions <i>ana</i> and <i>ara</i> only take these forms if the following word begins with a consonant. If the word begins with a vowel they become <i>an’</i>, <i>ar’</i>.</li>
 <li>Note ²: The preposition <i>imbi</i> “among” is simply the plural form of <i>imbë</i> “between”. This plural form is only used with plural nouns: <i>imbi nissi</i> “among women”.</li>
 <li>Note ³: When preceding the definite article <i>i</i> (<i>mi i</i>), this preposition simplifies to <i>mí</i> “in the”.</li>
-<li>Note ⁴: The adverbs <i>sinomë</i> “here” and <i>tanome</i> are literally “this place” (<i>si</i> + <i>nómë</i>) and “that place” (<i>ta</i> + <i>nómë</i>).</li>
+<li>Note ⁴: The adverbs <i>sinomë</i> “here” and <i>tanome</i> “there” are literally “this place” (<i>si</i> + <i>nómë</i>) and “that place” (<i>ta</i> + <i>nómë</i>).</li>
 </ul>
 
 <h2><a id="c7-3-8"></a>7.3.8 Section Summary</h2>
@@ -933,8 +933,8 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 
 <ul class="vocab-list">
 <li><b>alfírima</b> <i>adj.</i> “immortal”</li>
-<li><b>coita-</b> <i>v.</i> “to live”
-<ul><li><i>pa.t.</i> <b>coinë</b> “lived”</li></ul></li>
+<li><b>coita-</b> <i>v.</i> “to live (is alive)”
+<ul><li><i>pa.t.</i> <b>coinë</b> “lived (was alive)”</li></ul></li>
 <li><b>fir-</b> <i>v.</i> “to die (naturally)” ¹
 <ul><li><i>pa.t.</i> *<b>firnë</b> “died (naturally)”</li></ul></li>
 <li><b>fírië</b> <i>n.</i> “(natural) death”</li>
@@ -1205,7 +1205,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 
 <ol class="exercise-list" start="7">
 <li><i>Elvë uir alfírimë.</i></li>
-<li><i>Antuvan eldë massali.</i></li>
+<li><i>Antuvan elden massali.</i></li>
 <li><i>Túventë ma nöa.</i></li>
 <li><i>Merin i mo rehta inyë.</i></li>
 <li><i>I hesto quentë i ohtaren ar hye mennë i ostonna.</i></li>
@@ -1216,7 +1216,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 
 <ol class="exercise-list tengwar-block" start="7">
 <li><span class="transcribe" data-lang="q" data-value="Elvë uir alfírimë">Elvë uir alfírimë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Antuvan eldë massali">Antuvan eldë massali</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Antuvan elden massali">Antuvan elden massali</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Túventë ma nöa">Túventë ma nöa</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Merin i mo rehta inyë">Merin i mo rehta inyë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I hesto quentë i ohtaren ar hye mennë i ostonna">I hesto quentë i ohtaren ar hye mennë i ostonna</span></li>
