--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-08.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-08.html
@@ -189,7 +189,7 @@
 
 <ul>
 <li>Derivative verbs have weak pasts: <i>henta-</i> → <i>hentanë</i>, <i>tengwa-</i> → <i>tengwanë</i>.<ul>
-<li>They sometimes have weak perfects: <i>ehentanië</i> vs. <i>etengwië</i>.</li>
+<li>They may or may not have weak perfects: <i>ehentanië</i> vs. <i>etengwië</i>.</li>
 </ul></li>
 <li>Derivative verbs otherwise closely follow the simplified a-stem conjugations described in this course.</li>
 </ul>
@@ -376,7 +376,7 @@
 <li><b>Derivative Verbs:</b> Weak <i>henta-</i> “to read, scan”, <i>tengwa-</i> “to read (writing)”.
 <ul>
 <li><b>Past:</b> Use weak pasts: <i>hentanë, tengwanë</i>.</li>
-<li><b>Perfect:</b> Sometimes have weak perfects: <i>ehentanië</i> vs. <i>etengwië</i>.</li>
+<li><b>Perfect:</b> May or may not have weak perfects: <i>ehentanië</i> vs. <i>etengwië</i>.</li>
 </ul></li>
 </ul>
 
@@ -1022,7 +1022,7 @@ of the sweet mead in lofty halls ...
 <li><b>Derivative Verbs:</b> Weak <i>henta-</i> “to read, scan”, <i>tengwa-</i> “to read (writing)”.
 <ul>
 <li><b>Past:</b> Use weak pasts: <i>hentanë, tengwanë</i>.</li>
-<li><b>Perfect:</b> Sometimes have weak perfects: <i>ehentanië</i> vs. <i>etengwië</i>.</li>
+<li><b>Perfect:</b> May or may not have weak perfects: <i>ehentanië</i> vs. <i>etengwië</i>.</li>
 </ul></li>
 </ul>
 
