--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
@@ -241,7 +241,7 @@
 <li><i>hácala</i> “yawning” ← *<i>hac-</i></li>
 <li><i>hlápula</i> “blowing” ← <i>hlapu-</i></li>
 <li><i>taltala</i> “falling” ← <i>talta-</i></li>
-<li><i>rúmala</i> “moving” ← <i>rum-</i> or <i>rúma-</i></li>
+<li><i>rúmala</i> “moving” ← *<i>rum-</i> or <i>rúma-</i></li>
 </ul></li>
 <li>Passive:
 <ul>
@@ -250,9 +250,9 @@
 </ul></li>
 </ul>
 
-<p>The active examples look like present forms + <i>-la</i> and the passive examples look like present forms with <i>-ina</i> replacing the final <i>a</i>. However for the participle <i>rúmala</i>, Tolkien indicated its stem form was <i>rúma-</i> “shift, move, heave” rather than <i>rum-</i> in notes associated with the poem (MC/223). Given this, some or all of these examples could be ordinary participles within some alternate system rather than imperfect participles. However, <i>rúma-</i> would be rather unusual verb form. As such this “verb stem” (along with similar <i>píca-</i> from the same notes) could actually be the present form of the verb, to which further suffixes are added.</p>
+<p>The active examples look like present forms + <i>-la</i> and the passive examples look like present forms with <i>-ina</i> replacing the final <i>a</i>. However for the participle <i>rúmala</i>, Tolkien indicated its stem form was <i>rúma-</i> “shift, move, heave” rather than *<i>rum-</i> in notes associated with the poem (MC/223). Given this, some or all of these examples could be ordinary participles within some alternate system rather than imperfect participles. However, <i>rúma-</i> would be a rather unusual verb form. As such this “verb stem” (along with similar <i>píca-</i> from the same notes) could actually be the present form of the verb, to which further suffixes are added.</p>
 
-<p>Giving the uncertainty surrounding the imperfect participles, I’d recommend avoiding them entirely for (Neo) Quenya writing until you get more experience or we get more information about them. This is especially true since LVS said only the three aorist, past/perfect, and future active participles were used and didn’t mention the imperfect at all (PE22/155).</p>
+<p>Giving the uncertainty surrounding the imperfect participles, I’d recommend avoiding them entirely for (Neo) Quenya writing until you get more experience or we get more information about them. This is especially true since LVS said only the aorist, past/perfect, and future active participles were used and didn’t mention the imperfect at all (PE22/155).</p>
 
 </div>
 
@@ -725,7 +725,7 @@
 
 <ul>
 <li>The prefix is <i>ar-</i> before vowels and virtually all consonants.</li>
-<li>The longer form <i>ari-</i> occasionally appears when ancient consonant cluster are restored.</li>
+<li>The longer form <i>ari-</i> occasionally appears when ancient consonant clusters are restored.</li>
 </ul>
 
 <p>As an example of the last of these, Tolkien gave <i>aristorna</i> “most hard” from <i>torna</i> “hard” (ancient <i>storna</i>). More ordinary examples include: <i>arcalima</i> “most bright” = (<i>ar</i> + <i>calima</i>), <i>aryára</i> “most old”, <i>armelda</i> “most beloved”, <i>araiqua</i> “most steep”. Strictly speaking, the <i>ar-</i> prefix is a stronger intensive (“exceedingly”), but in practice is functionly a superlative (“most”).</p>
@@ -751,7 +751,7 @@
 <p>In Tolkien’s discussion of the <i>am</i>-intensives, there was no mention of the <i>ar</i>-superlatives, so the two ideas may not be compatible.</p>
 
 <div class="advanced-topic">
-<p><a id="c9-4-1-4"></a><b>9.4.1.4 How do we know this?</b> Tolkien’s earliest explanation of the <i>an</i>-intensives dates back to <i>The Etymologies</i> of the 1930s, where the intensives were based on a prefixed syllabic nasal <i>ṇ-</i> blended with the intensifying prefix <i>a-</i> (VT45/5, 36). The 1930s intensives used a different set of consonant assimilations: <i>all-</i>, <i>arr-</i>, <i>ass-</i> rather than <i>anal-</i>, <i>anar-</i>, <i>ans-</i>. The 1930s intensives sometimes also used vowels other than <i>a</i>, such as <i>um-</i> before <i>p, qu</i> (<i>ump-, unqu-</i>) or <i>in-</i> before <i>c</i> (<i>inc-</i>). I’ve seen some system of (Neo) Quenya intensives based on these 1930s forms, in particular early versions of Helge Fauskanger’s Quenya course and the Quenya course of Thorsten Renk.</p>
+<p><a id="c9-4-1-4"></a><b>9.4.1.4 How do we know this?</b> Tolkien’s earliest explanation of the <i>an</i>-intensives dates back to <i>The Etymologies</i> of the 1930s, where the intensives were based on a prefixed syllabic nasal <i>ṇ-</i> blended with the intensifying prefix <i>a-</i> (VT45/5, 36). The 1930s intensives used a different set of consonant assimilations: <i>all-</i>, <i>arr-</i>, <i>ass-</i> rather than <i>anal-</i>, <i>anar-</i>, <i>ans-</i>. The 1930s intensives sometimes also used vowels other than <i>a</i>, such as <i>um-</i> before <i>p, qu</i> (<i>ump-, unqu-</i>) or <i>in-</i> before <i>c</i> (<i>inc-</i>). I’ve seen some systems of (Neo) Quenya intensives based on these 1930s forms, in particular early versions of Helge Fauskanger’s Quenya course and the Quenya course of Thorsten Renk.</p>
 
 <p>Tolkien gave a different explanation of the <i>an</i>-intensives in Quenya Notes written in 1957, connecting it to the root √<i>AN</i> “to(wards)” with an extended sense “plu[s]” (PE17/146). In notes written around this time he described a system of <i>an</i>-intensives and <i>ar</i>-superlatives (PE17/56-57). Tolkien didn’t give many details on how the prefix <i>an-</i> combines with other consonants, saying only “<i>an</i> occur[s] before agreeable consonants ... <i>ana</i> before groups”. He also said that the form <i>an</i> was only used before a light syllable, as in <i>ancalima</i> “very bright”, where the syllable <i>cal</i> is light because it has a short vowel followed by a single consonant. Before a heavy syllable the longer suffix was <i>ana-</i>, as in <i>anacarnë</i> “very red” where <i>carn-</i> is heavy because it is followed by a consonant cluster (Tolkien’s actual example was <i>anamelda</i> “very beloved”). The prefix <i>ar(i)-</i> behaved similarly: <i>arcalima</i> “most bright” vs. <i>aricarnë</i> “most red” (vs. Tolkien’s example <i>arimelda</i>).</p>
 
@@ -984,11 +984,11 @@
 
 <p>Marriage and childbearing could begin as early as a few <i>yén</i> after maturity, but it was not unusual for childrearing to be delayed as much as twenty <i>yéni</i> (~2500 solar years), to a physiological age of about 36 for Elvish woman and 42 (or more) for Elvish men. Childbearing remains possible up to the age of about 60-75 <i>yéni</i> (~10,000 solar years), but seldom occurs after this. Each child born taxes the Elvish spirit (both the mother and father), so that Elves seldom have more than four children. Pregnancy lasts 9 solar years, and children are usually spaced 12 to 36 solar years apart, so that the physiological difference in the age of Elvish siblings resembled those of Men. It is therefore common for Elves to bear all their children within a span of a single <i>yén</i>, though longer gaps are possible.</p>
 
-<p>Extremely old Elves (over 100 <i>yéni</i>) do not become physically frail as elderly Men do, but the strength of their spirit gradually overwhelms their body, and they begin to fade. Most such Elves depart to Valinor before the process progresses too far, living the remainder of their eternal lives in peace. Those who refuse will fade into a wraith-like existence, becoming invisible and often-embittered spirits since they usually have some seriously personal problems if they are unwilling to depart the mortal realm. The same is true of Elves whose bodies are slain in the mortal realm but refuse to let their spirits be called to the Halls of Mandos.</p>
+<p>Extremely old Elves (over 100 <i>yéni</i>) do not become physically frail as elderly Men do, but the strength of their spirit gradually overwhelms their body, and they begin to fade. Most such Elves depart to Valinor before the process progresses too far, living the remainder of their eternal lives in peace. Those who refuse will fade into a wraith-like existence, becoming invisible and often-embittered spirits since they usually have some serious personal problems if they are unwilling to depart the mortal realm. The same is true of Elves whose bodies are slain in the mortal realm but refuse to let their spirits be called to the Halls of Mandos.</p>
 
 <h1><a id="c9-6"></a>9.6 Guided Reading: Aia María</h1>
 
-<p>In the 1950s Tolkien translated a set of Catholic prayers into Quenya, one of them being the Latin prayer “Ave Maria”, in Quenya titled <i>Aia María</i> (VT43/26-38). Up until this point we have presented the guided readings as if they were part of a single Quenya language, glossing over any minor conceptual shifts within the language on Tolkien’s part. With the 1950s prayers, however, there are items in that are contrary to the (Neo) Quenya practices advocated in this course. Tolkien wrote four versions of the prayer, the last of which is presented here. As usual, here is the new vocabulary appearing in the prayer:</p>
+<p>In the 1950s Tolkien translated a set of Catholic prayers into Quenya, one of them being the Latin prayer “Ave Maria”, in Quenya titled <i>Aia María</i> (VT43/26-38). Up until this point we have presented the guided readings as if they were part of a single Quenya language, glossing over any minor conceptual shifts within the language on Tolkien’s part. With the 1950s prayers, however, there are items that are contrary to the (Neo) Quenya practices advocated in this course. Tolkien wrote four versions of the prayer, the last of which is presented here. As usual, here is the new vocabulary appearing in the prayer:</p>
 
 <ul class="vocab-list">
 <li><b>as</b> <i>prep.</i> “with” ¹</li>
@@ -1052,7 +1052,7 @@ and blessed is the fruit of your womb Jesus.
 
 <blockquote>
 Hail Mary, full of grace,<br/>
-the Lord is with thee!<br/>
+the Lord is with thee.<br/>
 Blessed art thou amongst women,<br/>
 and blessed is the fruit of thy womb Jesus.
 </blockquote>
