--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-10.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-10.html
@@ -470,7 +470,7 @@
 <li><b>tenta</b> <i>adv.</i> “yet, up until then (past)”</li>
 </ul>
 
-<p>The adverbs <i>tá</i> and <i>en</i> both mean “then”, but <i>tá</i> refers to the past and <i>en</i> to the future: <i>quenten sen tá</i> “I spoke to him/her then [past]”, <i>quetuvan sen en</i> “I will speak to him/her then [future]”. It was once possible to use <i>en</i> with the aorist as a way of marking the future, but this construction is now somewhat archaic: <i>quetin sen en</i> “I speak to him then [future]”; the construction dates back to time before Quenya had formalized its future tense. Where still used it has the implication of “soon” = “I speak to him soon”.</p>
+<p>The adverbs <i>tá</i> and <i>en</i> both mean “then”, but <i>tá</i> refers to the past and <i>en</i> to the future: <i>quenten sen tá</i> “I spoke to him/her then [past]”, <i>quetuvan sen en</i> “I will speak to him/her then [future]”. It was once possible to use <i>en</i> with the aorist as a way of marking the future, but this is somewhat archaic: <i>quetin sen en</i> “I speak to him then [future]”. This <i>en</i>-construction dates back to time before Quenya had formalized its future tense. Where still used it has the implication of “soon” = “I speak to him soon”.</p>
 
 <div class="advanced-topic">
 <p><a id="c10-2-2-3"></a><b>10.2.1.3 How do we know this?</b> Most of the inflected demonstratives above are drawn from the partially published 1968 notes on the demonstratives mentioned in the previous section (VT49/11-12, 18). The discussion on the usage of <i>en</i> as an (archaic) future marker with the aorist are based on notes from the early 1950s (PE22/131).</p>
@@ -719,7 +719,7 @@
 <ul><li>More explicity: “it is compelled to me to go to the city”.</li></ul></li>
 </ul>
 
-<p>The impersonal constructions put the putative subject in the dative: <i>nin</i>.</p>
+<p>The impersonal constructions put the putative subject in the dative, as with <i>nin</i> in the examples above.</p>
 
 <div class="advanced-topic">
 <p><a id="c10-4-1-1"></a><b>10.4.1.1 How do we know this?</b> The modal use of the verbs <i>pol-</i>, <i>ista-</i>, and <i>lerta-</i> is discussed in notes from 1959-60 (VT41/5-6). The use of impersonal <i>ec-</i> “may” is discussed in notes from 1967 (VT49/20).</p>
