--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
@@ -386,7 +386,7 @@
 
 <ul>
 <li>Ownership of a thing: <i>macil atanwa</i> “a man’s sword”, <i>róma Oroméva</i> “horn of [belonging to] Oromë”.</li>
-<li>An adjectival description of something: <i>alcar i aranwa</i> “glory of the king = the king’s glory”, <i>aran eldaiva</i> “king of the Elves = Elvish king”.</li>
+<li>An adjectival description of something: <i>i alcar aranwa</i> “the glory of [the] king = the king’s glory”, <i>aran eldaiva</i> “king of the Elves = Elvish king”.</li>
 </ul>
 
 <p>This second descriptive use is often interchangeable with the genitive. The main distinction in descriptive use is that <i>-va</i> tends to be used for innate attributes, while <i>-o</i> is used of attributes applicable in the moment: <i>alcar Oromëo</i> = “Orome’s glory (in the moment)” vs. <i>alcar Oroméva</i> = “Orome’s (inherent) glory”.</p>
@@ -685,7 +685,7 @@
 </ul></li>
 <li><b>Strong pasts from <i>y, w</i>:</b> These arise mainly as strong pasts of derived verbs, but are fairly common:
 <ul>
-<li><i>coita-</i> “to live” → <i>coinë</i> “lived” from √<i>KOY</i>.</li>
+<li><i>coita-</i> “to live (is alive)” → <i>coinë</i> “lived (was alive)” from √<i>KOY</i>.</li>
 <li><i>lauta-</i> “to abound” → <i>launë</i> “abounded” from √<i>LAW</i>.</li>
 </ul></li>
 <li><b>Half-strong pasts:</b> Formative verbs (ya-formative, ta-formative) have half-strong pasts with the nasal inserted before the <i>ya/ta</i> suffix and preceded by the base vowel:
@@ -830,7 +830,7 @@
 <li><b>Derivative Verbs:</b> Weak <i>henta-</i> “to read, scan”, <i>tengwa-</i> “to read (writing)”.
 <ul>
 <li><b>Past:</b> Use weak pasts: <i>hentanë, tengwanë</i>.</li>
-<li><b>Perfect:</b> Sometimes have weak perfects: <i>ehentanië</i> vs. <i>etengwië</i>.</li>
+<li><b>Perfect:</b> May or may not have weak perfects: <i>ehentanië</i> vs. <i>etengwië</i>.</li>
 </ul></li>
 </ul>
 
