--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
@@ -157,7 +157,6 @@
 <li><b>calca</b> <i>n.</i> “glass”</li>
 <li><b>calima</b> <i>adj.</i> “bright”</li>
 <li><b>calma</b> <i>n.</i> “lamp”</li>
-<li><b>calta-</b> <i>v.</i> “to kindle”<ul><li><i>pa.t.</i> <b>caltanë</b> “kindled”</li></ul></li>
 <li><b>cáno</b> <i>n.</i> “commander”</li>
 <li>!<b>canquain</b> <i>num.</i> “forty”</li>
 <li>*<b>canquë</b> <i>num.</i> “fourteen”</li>
@@ -189,7 +188,7 @@
 <li><b>ciryamo</b> <i>n.</i> “sailor”</li>
 <li><b>cöa</b> <i>n.</i> “house”</li>
 <li><b>coirë</b> <i>n.</i> “early spring, stirring”</li>
-<li><b>coita-</b> <i>v.</i> “to live”<ul><li><i>pa.t.</i> <b>coinë</b> “lived”</li></ul></li>
+<li><b>coita-</b> <i>v.</i> “to live (is alive)”<ul><li><i>pa.t.</i> <b>coinë</b> “lived (was alive)”</li></ul></li>
 <li><b>col-</b> <i>v.</i> “to carry, bear, wear”<ul><li><i>pa.t.</i> *<b>collë</b> “carried, bore, wore”</li></ul></li>
 <li>^<b>colca</b> <i>n.</i> “box”</li>
 <li><b>cólima</b> <i>adj.</i> “light, bearable”</li>
@@ -975,6 +974,7 @@
 <li><b>tië</b> <i>n.</i> “path, road”</li>
 <li><b>tillë</b> <i>n.</i> “tip, point”</li>
 <li><b>tinco</b> <i>n.</i> “metal”</li>
+<li><b>tinta-</b> <i>v.</i> “to kindle”<ul><li><i>pa.t.</i> *<b>tintanë</b> “kindled”</li></ul></li>
 <li><b>tir-</b> <i>v.</i> “to watch”<ul><li><i>pa.t.</i> <b>tirnë</b> “watched”</li></ul></li>
 <li><b>tirion</b> <i>n.</i> “watch tower”</li>
 <li><b>tiuca</b> <i>adj.</i> “thick, fat”</li>
