--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
@@ -650,7 +650,7 @@
 <li>Fire [is] hot.</li>
 <li>Water [is] wet.</li>
 <li>Ice [is] cold.</li>
-<li>Light a fire, please.</li>
+<li>Light [kindle] a lamp, please.</li>
 <li>The air is warm in the house.</li>
 <li>Plants grow in the earth.</li>
 </ol>
