--- a/src/main/webapp/elvish-composition-archive/ellanto/ceraib-serthir.html
+++ b/src/main/webapp/elvish-composition-archive/ellanto/ceraib-serthir.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
 <link rel="stylesheet" type="text/css" href="../css/global.css"></link>
-<title>A Lirulin by Luinyelle</title>
+<title>Ceraib Serthir by Ellanto</title>
 
 </head>
 <body>
