--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
@@ -611,7 +611,7 @@
 <a id="k"></a>
 <ul class="vocab-list">
 <li>“kick” <i>v.</i> <b>lah-</b><ul><li>“kicked” <i>pa.t.</i> <b>laccë</b></li></ul></li>
-<li>“kindle” <i>v.</i> <b>calta-</b><ul><li>“kindled” <i>pa.t.</i> <b>caltanë</b></li></ul></li>
+<li>“kindle” <i>v.</i> <b>tinta-</b><ul><li>“kindled” <i>pa.t.</i> *<b>tintanë</b></li></ul></li>
 <li>“kindred” <i>n.</i> <b>nos(së)</b></li>
 <li>“king” <i>n.</i> <b>aran</b></li>
 <li>“kingdom” <i>n.</i> <b>aranië</b></li>
@@ -668,7 +668,7 @@
 <li>“lips (as a pair)” <i>n.</i> <b>peu</b></li>
 <li>“listen” <i>v.</i> <b>lasta-</b><ul><li>“listened” <i>pa.t.</i> <b>lastanë</b></li></ul></li>
 <li>“little” <i>adj.</i> <b>nitya</b></li>
-<li>“live (be alive)” <i>v.</i> <b>coita-</b><ul><li>“lived (was alive)” <i>pa.t.</i> <b>coinë</b></li></ul></li>
+<li>“live (is alive)” <i>v.</i> <b>coita-</b><ul><li>“lived (was alive)” <i>pa.t.</i> <b>coinë</b></li></ul></li>
 <li>“live (dwell)” <i>v.</i> <b>mar-</b><ul><li>“lived (dwelled)” <i>pa.t.</i> *<b>marnë</b></li></ul></li>
 <li>“lo (behold)” <i>interj.</i> <b>yé</b></li>
 <li>“lofty” <i>adj.</i> <b>tára</b></li>
